Update for Patch v3.5.2 - checksum: 27ef

--- a/mod/thmod/localisation/english/federations_l_english.yml
+++ b/mod/thmod/localisation/english/federations_l_english.yml
@@ -2,7 +2,7 @@
  IS_YOU:1 "นี่คือคุณ"
  ORIGIN:0 "จุดเริ่มต้น"
  EMPIRE_ORIGIN:0 "$ORIGIN$"
- TOOLTIP_SETUP_ORIGIN:0 "เลือกจุดกำเนิดสำหรับจักรวรรดิของคุณ"
+ TOOLTIP_SETUP_ORIGIN:1 "§H$ORIGIN$§!\nเลือกจุดกำเนิดสำหรับจักรวรรดิของคุณ"
  GAMESETUP_COUNTRY_INVALID_ORIGIN:0 "You need to select an Origin before continuing"
  ORIGIN_INITIALIZER_RESTRICTION:0 "Cannot change due to current Origin selection"
  origin_default:0 "ความสำเร็จในการรวมตัวกัน"
@@ -58,7 +58,7 @@
  d_tree_of_life_colony_desc:1 "An offshoot of the Great Tree, transplanted here by the Hive. It will take millennia for it to fully mature."
  d_lithoid_crater:0 "Massive Crater"
  d_lithoid_crater_desc:0 "The impact site of the meteorite which brought Lithoids to this planet."
- d_buried_lithoids:0 "Buried Lithoids"
+ d_buried_lithoids:1 "£blocker£ Buried Lithoids"
  d_buried_lithoids_desc:0 "These Lithoids were driven deep into the ground when they fell from orbit."
  lithoid_crater:0 "Lithoid Crater"
  lithoid_crater_desc:0 "This large crater is the result of a Lithoid-bearing meteorite slamming into the planet."
@@ -68,7 +68,7 @@
  d_machine_minerals_desc:0 "The refined mineral wealth of an entire Solar system is gathered here in continent-sized piles."
  d_organic_slurry:0 "Organic slurry"
  d_organic_slurry_desc:0 "An ocean of organic slurry, the processed remains of the former biomass of a planet."
- d_resource_consolidation_1:0 "Malfunctioning Replicator Bay"
+ d_resource_consolidation_1:1 "£blocker£ Malfunctioning Replicator Bay"
  d_resource_consolidation_1_desc:0 "The replicator bay built into the Machine World is malfunctioning, producing endless piles of $MACHINE_hand_plural$."
  juggernaut:0 "จักเกอร์น็อท"
  juggernaut_plural:0 "จักเกอร์น็อท"
@@ -851,7 +851,7 @@
  resolution_ecology_environmental_control_board:0 "คณะกรรมการควบคุมสิ่งแวดล้อม"
  in_breach_of_resolution_ecology_environmental_control_board:0 "In breach of Environmental Control Board"
  resolution_ecology_environmental_control_board_desc:0 "Industry cannot regulate itself. We need a multinational environmental control board with the power to oversee industry and development to shut down environmental abuse."
- resolution_ecology_environmental_control_board_tooltip:1 "Converting planets into an §YEcumenopolis§! or §YTerraforming§! them into anything other than a §YGaia World§! is §Rbanned§!."
+ resolution_ecology_environmental_control_board_tooltip:2 "Converting planets into an §YEcumenopolis§! or §YTerraforming§! them into anything other than a §YGaia World§! is §Rbanned§!.\n£unity£ $unity$ from Naturally Occuring Blockers for §YEnvironmentalist Empires§!: §G+2§! £unity£""
  resolution_ecology_paradise_initiative_tooltip:0 "£unity£ $unity$ from Naturally Occuring Blockers for §YEnvironmentalist Empires§!: §G+3§! £unity£"
  resolution_ecology_paradise_initiative:0 "โครงการริเริ่มแดนสุขาวดี"
  resolution_ecology_paradise_initiative_desc:0 "With meticulous caretaking of our worlds, we can live in ecological harmony. It should be our goal to leave only memories behind where we tread."
@@ -878,7 +878,7 @@
  resolution_galacticstudies_astral_studies_network_tooltip:0 "Enhances the effectiveness of the §Y$sm_solar_panel_network$§!, §Y$sm_black_hole_observatory$§!, and §Y$sm_listening_post$§! starbase modules and buildings."
  resolution_galacticstudies_advanced_xenostudies:0 "การศึกษาต่างดาวขั้นสูง"
  resolution_galacticstudies_advanced_xenostudies_desc:1 "There is much to learn from all of the cultures of the universe. We should add additional information-gathering instrumentation to all starbases while working more closely with Enclaves."
- resolution_galacticstudies_advanced_xenostudies_tooltip:1 "Observation Posts provide additional £society£ §HSociety Research§! while §YObserving§! or §YInfiltrating§! primitive civilizations.\n\nEnhances the effectiveness of the §Y$sm_art_college$§!, §Y$sm_curator_think_tank$§!, §Y$sm_trader_proxy_office$§!, §Y$sm_salvager_workshop$§!, and §Y$sm_mercenary_garrison$§! starbase buildings.\n\nThe §YArtificial Intelligence Outlawed§! and §YPassive Native Studies§! policies are §Rbanned§!."
+ resolution_galacticstudies_advanced_xenostudies_tooltip:2 "Observation Posts provide additional £society£ §HSociety Research§! while §YObserving§! or §YInfiltrating§! primitive civilizations.\n\nEnhances the effectiveness of the §Y$sm_art_college$§!, §Y$sm_curator_think_tank$§!, §Y$sm_salvager_workshop$§!, and §Y$sm_mercenary_garrison$§! starbase buildings.\n\nThe §YArtificial Intelligence Outlawed§! and §YPassive Native Studies§! policies are §Rbanned§!."
  resolution_galacticstudies_ethical_guideline_refactoring:0 "การปรับโครงสร้างจริยธรรม"
  resolution_galacticstudies_ethical_guideline_refactoring_desc:0 "To possess the ability to further science provides a moral imperative to do so, free from outdated ethical concepts that restrain us. We do what we must because we can."
  resolution_galacticstudies_ethical_guideline_refactoring_tooltip:0 "Empires must use the most powerful §YLeader Enhancement§! policy available to them or be in §RBreach of Galactic Law§!!\n\nEmpires that are §YEgalitarian§! may be unable to meet this requirement and will be in §RBreach of Galactic Law§!!"
@@ -886,7 +886,7 @@
  resolution_galacticstudies_extradimensional_experimentation_desc:0 "Preliminary studies suggest that extensive use of reality-altering substances can grant researchers unexpected insights.\n\n§RAfter all, what's the worst that could happen?§!"
  resolution_galacticstudies_extradimensional_experimentation_tooltip:0 "Unlocks a planetary decision that consumes £sr_zro£ Zro to fund extradimensional research at Advanced Research Complexes."
  pm_extradimensional_experimentation:0 "$resolution_galacticstudies_extradimensional_experimentation$"
- pm_extradimensional_experimentation_tooltip:0 "§Y$building_research_lab_3$§!:\n+1£sr_zro£ Zro upkeep\n+1£job_researcher£ $job_dimensional_portal_researcher$"
+ pm_extradimensional_experimentation_tooltip:0 "§Y$building_research_lab_3$§!:\nค่าบำรุงรักษา +1£sr_zro£ Zro\n+1£job_researcher£ $job_dimensional_portal_researcher$"
  pm_extradimensional_experimentation_desc:0 "Extradimensional studies are ongoing at this planet's Advanced Research Complexes.\n\n§RWhat could possibly go wrong?§!"
  extradimensional_experimentation_tooltip:0 "§YPlanetary Decision Unlocked:§! $pm_extradimensional_experimentation$"
  decision_extradimensional_experimentation:0 "$resolution_galacticstudies_extradimensional_experimentation$"
@@ -1000,11 +1000,11 @@
  resolution_mutualdefense_repeal_1_effect_success:0 "ยกเลิกมติ §Y$resolution_mutualdefense_the_readied_shield$§!"
  resolution_mutualdefense_repeal_2:0 "§Rยกเลิก $resolution_mutualdefense_military_readiness_act$§!"
  resolution_mutualdefense_repeal_2_desc:0 "$resolution_mutualdefense_repeal_1_desc$"
- resolution_mutualdefense_repeal_2_effect_success:2 "Repeals the §Y$resolution_mutualdefense_military_readiness_act$§! resolution, leaving §Y$resolution_mutualdefense_the_readied_shield$§! as galactic law."
+ resolution_mutualdefense_repeal_2_effect_success:2 "ยกเลิกมติ §Y$resolution_mutualdefense_military_readiness_act$§!, ออก §Y$resolution_mutualdefense_the_readied_shield$§! เป็นกฎหมายกาแลกติก"
  resolution_mutualdefense_repeal_3:0 "§Rยกเลิก $resolution_mutualdefense_enemy_of_my_enemy$§!"
  resolution_mutualdefense_repeal_3_desc:0 "$resolution_mutualdefense_repeal_1_desc$"
  resolution_mutualdefense_repeal_3_effect_success:2 "Repeals the §Y$resolution_mutualdefense_enemy_of_my_enemy$§! resolution, leaving §Y$resolution_mutualdefense_military_readiness_act$§! as galactic law.\n\n"
- resolution_mutualdefense_repeal_4:1 "§RRepeal $resolution_mutualdefense_castigation_proclamation$§!"
+ resolution_mutualdefense_repeal_4:1 "§Rยกเลิก $resolution_mutualdefense_castigation_proclamation$§!"
  resolution_mutualdefense_repeal_4_desc:0 "$resolution_mutualdefense_repeal_1_desc$"
  resolution_mutualdefense_repeal_4_effect_success:3 "Repeals the §Y$resolution_mutualdefense_castigation_proclamation$§! resolution, leaving §Y$resolution_mutualdefense_enemy_of_my_enemy$§! as galactic law.\n\n"
  resolution_mutualdefense_repeal_5:0 "§Rยกเลิก $resolution_mutualdefense_renegade_containment$§!"
@@ -1050,10 +1050,10 @@
  resolution_rulesofwar_reverence_for_life_tooltip:0 "§YPurging§! (other than Displacement) and the use of §YWorld Crackers§! is §Rbanned§!."
  resolution_rulesofwar_independent_tribunals:0 "ศาลอิสระ"
  resolution_rulesofwar_independent_tribunals_desc:0 "ความยุติธรรมจะต้องเกิดขึ้นสำหรับการก่ออาชญากรรมที่ทหารกระทำและการเสียชีวิตของพลเรือนจะต้องได้รับการพิจารณา เราควรจัดตั้งศาลอิสระเพื่อสอบสวนและลงโทษอาชญากรรมสงคราม"
- resolution_rulesofwar_independent_tribunals_tooltip:0 "§YArmageddon§! and §YIndiscriminate§! bombardment stances, and using any Colossus weapon other than a §YGlobal Pacifier§! are §Rbanned§!."
+ resolution_rulesofwar_independent_tribunals_tooltip:0 "การทิ้งระเบิดจากวงโคจรดาวแบบ §Yทำลายล้างขั้นสูงสุด§! และแบบ §Yไม่เลือกเจาะจง§! รวมไปถึงการใช้อาวุธโคลอสซัสใดๆนอกเหนือจาก §Yเครื่องทำให้โลกเกิดความสงบ§! จะ §Rถูกแบน§!"
  resolution_rulesofwar_last_resort_doctrine:0 "หลักของที่พึ่งสุดท้าย"
  resolution_rulesofwar_last_resort_doctrine_desc:0 "สงครามควรเป็นทางเลือกสุดท้ายของเราเมื่อการทูตในรูปแบบอื่นๆล้มเหลว ไม่ควรเป็นเครื่องมือที่ใช้เพื่อวัตถุประสงค์ที่ไม่ชอบธรรม"
- resolution_rulesofwar_last_resort_doctrine_tooltip:0 "The §YUnrestricted Wars§! war philosophy is §Rbanned§!."
+ resolution_rulesofwar_last_resort_doctrine_tooltip:0 "ปรัชญาสงคราม §Yสงครามที่ไม่จำกัด§! §Rถูกแบน§!"
  resolution_rulesofwar_demobilization_initiative:0 "ความคิดริเริ่มการปลดประจำการหลังจากสิ้นสงคราม"
  resolution_rulesofwar_demobilization_initiative_desc:0 "Resources currently wasted on war could be better used for a myriad of other projects to better the lives of our civilians. We should put hard limits on military development and focus on improving things rather than destroying them."
  resolution_rulesofwar_demobilization_initiative_tooltip:0 "The §YMilitarized Economy§! economic policy is banned."
@@ -1471,6 +1471,8 @@
  col_bureau_hive_desc:0 "$col_bureau_desc$"
  col_bureau_machine:0 "$col_bureau$"
  col_bureau_machine_desc:0 "$col_bureau_desc$"
+ col_trophy_machine:0 "Sanctuary World"
+ col_trophy_machine_desc:0 "A world dedicated to the care and protection of organic life."
  col_habitat_bureau:1 "Unification Station"
  col_habitat_bureau_desc:1 "An entire habitat dedicated to unifying our empire."
  col_habitat_bureau_spiritualist:0 "Ecclesiastical Station"
@@ -2642,9 +2644,6 @@
  thesis_megacorp3:0 "synergistic progression levelling in asset calibration"
  thesis_megacorp4:0 "dynamizing outflow projections with radical cynicism"
  thesis_megacorp5:0 "tidal pools and what they can teach us about daily user acquisition"
- NAME_Wenkwort:0 "Wenkwort"
- NAME_Gardeners:0 "Audon Caretakers"
- NAME_wenkwort_prime:0 "Wenkwort Artem"
  CURRENT_TERM_ENDS:0 "Current Term Ends: $DATE|Y$"
  fedel.1501.name:0 "A Federation Committee is Formed"
  fedel.1501.desc:0 "An impartial committee of scientists and thinkers is gathering within our federation chambers. Its purpose: to serve the [root.GetAllianceName] as academic arbiters during our upcoming leadership contest.\n\nEach empire will now assemble a team of researchers to investigate an issue, the findings of which should somehow benefit the future of our federation. The teams will present their findings to an open forum. Whichever thesis study rates highest in innovation, scientific rigor and coherence will earn its authors' empire the right of leadership for the next term."
