--- a/mod/thmod/localisation/english/horizonsignal_l_english.yml
+++ b/mod/thmod/localisation/english/horizonsignal_l_english.yml
@@ -10,7 +10,7 @@
  spiritual_happy_with_open_loop_temple_desc:0 "Once again, the basalt arches whisper with the hushing of feet and the echo of prayers."
  waiting_world_ruins:0 "Forlorn Ruins"
  waiting_world_ruins_desc:1 "The wind sighs in the ruins. No one goes there."
- d_mothballed_facilities:0 "Mothballed Facilities"
+ d_mothballed_facilities:1 "£blocker£ Mothballed Facilities"
  d_mothballed_facilities_desc:0 "Districts and buildings finished to the latest colonial standard, but obviously left in disuse and partial disrepair for years."
  loop_debris_01_object:0 "Horizon Signal Debris"
  loop_debris_02_object:0 "Spiraling Pod"
