--- a/mod/thmod/localisation/english/messages_l_english.yml
+++ b/mod/thmod/localisation/english/messages_l_english.yml
@@ -22,6 +22,8 @@
  MESSAGE_SYSTEM_SURVEYED_TITLE:0 "สำรวจระบบโดยละเอียดแล้ว"
  AUTO_EXPLORE_CANCELED_MESSAGE_TYPE_TITLE:0 "คำสั่งของยานถูกยกเลิก"
  MESSAGE_FLEET_ORDER_AUTO_EXPLORE_CANCELED:1 "§H$FLEET$§! canceled its Auto Surveying order. It cannot reach or find any other unsurveyed systems."
+ AUTO_EXPLORE_FALLBACK_MESSAGE_TYPE_TITLE:0 "Fleet Falling Back To Exploration"
+ MESSAGE_FLEET_ORDER_AUTO_EXPLORE_FALLBACK:0 "§H$FLEET$§! cannot reach any unsurveyed systems but will try to explore to find additional ones."
  FLEET_BUILD_ORDER_CANCELED_MESSAGE_TYPE_TITLE:0 "$AUTO_EXPLORE_CANCELED_MESSAGE_TYPE_TITLE$"
  MESSAGE_FLEET_BUILD_ORDER_CANCELED_MESSAGE:0 "$FLEET|H$ was unable to build a $STATION|H$ in $SYSTEM|H$. Resources have been refunded."
  MESSAGE_BYPASS_EXPLORED:0 "Wormhole Explored"
@@ -107,7 +109,7 @@
  ACTION_ASK_FOR_FEDERATION_ASSOCIATION_PROPOSAL_FAILED_ACTOR:0 "คำขอของเราสำหรับสถานะการมีส่วนร่วมกับ §H[Recipient.GetAllianceName]§! ถูกปฏิเสธ"
  ACTION_ASK_FOR_FEDERATION_ASSOCIATION_PROPOSAL_FAILED_RECIPIENT:1 "คำขอจาก §H[Actor.GetName]§! สำหรับสถานะการมีส่วนร่วมกับ §H[Recipient.GetAllianceName]§! หมดเวลาแล้ว และถูกปฏิเสธโดยอัตโนมัติ"
  ACTION_DEMAND_SUBJUGATION_PROPOSAL_FAILED_ACTOR:0 "Our demand to subjugate §H[Recipient.GetName]§! was declined."
- ACTION_DEMAND_SUBJUGATION_PROPOSAL_FAILED_RECIPIENT:0 "The demand of subjugation from §H[Actor.GetName]§! timed out and was auto-declined."
+ ACTION_DEMAND_SUBJUGATION_PROPOSAL_FAILED_RECIPIENT:0 "ความต้องการให้เป็นบริวารจาก §H[Actor.GetName]§! หมดเวลาและถูกปฏิเสธโดยอัตโนมัติ"
  ACTION_DEMAND_SUBSIDIARY_PROPOSAL_FAILED_ACTOR:0 "Our takeover demand for §H[Recipient.GetName]§! to become our subsidiary was declined."
  ACTION_DEMAND_SUBSIDIARY_PROPOSAL_FAILED_RECIPIENT:0 "The takeover demand from §H[Actor.GetName]§! timed out and was auto-declined."
  ACTION_DEMAND_PROTECTORATE_PROPOSAL_FAILED_ACTOR:0 "Our offer to give Protectorate status to §H[Recipient.GetName]§! was declined."
@@ -148,7 +150,7 @@
  MESSAGE_LEAVE_ALLIANCE_TITLE:0 "Alliance Member Left"
  DIPLO_ACTION_LEAVE_ALLIANCE_DESC:0 "The $COUNTRY|Y$ has left the $ALLIANCE|Y$"
  DIPLO_ACTION_LEAVE_FEDERATION_DESC:0 "The $COUNTRY|Y$ has left the $ALLIANCE|Y$"
- MESSAGE_DEMAND_SUBJUGATION_TITLE:1 "Demand Subjugation"
+ MESSAGE_DEMAND_SUBJUGATION_TITLE:1 "ต้องการให้เป็นบริวาร(เมืองขึ้น)"
  MESSAGE_ASK_TO_BECOME_SUBJUGATED_TITLE:1 "Subjugation Request"
  MESSAGE_ASK_TO_BE_RELEASED_SUBJECT_TITLE:0 "Subject Release Request"
  MESSAGE_FORM_FEDERATION_TITLE:0 "คำขอจัดตั้งสหพันธ์"
@@ -202,6 +204,8 @@
  ACTION_INSULT_NOTIFICATION:2 "§H[From.GetName]§! insulted §H[Root.GetName]§!.\n\nIt seems that conflict is brewing..."
  ACTION_INTEGRATE_SUBJECT_NOTIFICATION:2 "§H[From.GetName]§! เริ่มการรวมเข้าด้วยกันกับ §H[Root.GetName]§!\n\nในไม่ช้าความเป็นอิสระของ [Root.GetAdj] จะถูกยกเลิก"
  ACTION_CANCEL_SUBJECT_INTEGRATION_NOTIFICATION:2 "§H[From.GetName]§! stopped integrating §H[Root.GetName]§!.\n\nIt appears that [Root.GetSpeciesNamePlural] may be more trouble than they're worth."
+ MESSAGE_TYPE_RELICS_GAINED_INTEGRATION_TITLE:0 "Relics gained from Integration"
+ MESSAGE_RELICS_GAINED_INTEGRATION:0 "We have gained all the relics that §H[From.GetName]§! possessed after integrating them."
  ACTION_FORM_DEFENSIVE_PACT_NOTIFICATION:1 "§H[From.GetName]§! ทำสนธิสัญญาป้องกันตนเองกับ §H[Root.GetName]§!\n\nตอนนี้พวกเขาจะปกป้องซึ่งกันและกันจากศัตรูทั้งหมด"
  ACTION_BREAK_DEFENSIVE_PACT_NOTIFICATION:1 "§H[From.GetName]§! ยกเลิกสนธิสัญญาป้องกันตนเองกับ §H[Root.GetName]§!\n\nดูเหมือนว่าพวกเขาเชื่อว่าอยู่คนเดียวดีกว่า"
  ACTION_FORM_NON_AGGRESSION_PACT_NOTIFICATION:1 "§H[From.GetName]§! ทำสนธิสัญญาไม่รุกรานกับ §H[Root.GetName]§!\n\nเราจะมาดูกันว่าความสงบนี้จะคงอยู่ได้หรือไม่"
@@ -271,9 +275,9 @@
  MESSAGE_FLEET_DETECTED_MESSAGE_TYPE_TITLE:0 "ตรวจพบกองยาน"
  MESSAGE_OBJECT_DETECTED_WE:0 "An unidentified object has been detected on a direct course towards the §Y$TARGET$ System§!!"
  MESSAGE_OBJECT_DETECTED_MESSAGE_TYPE_TITLE:0 "Unidentified Object Detected"
- MESSAGE_FLEET_EVADE_HOSTILE:0 "$FLEET$ has encountered a hostile $HOSTILE|R$ fleet in $SYSTEM|H$ and is currently attempting to evade them!"
+ MESSAGE_FLEET_EVADE_HOSTILE:0 "$FLEET$ ได้เจอกับกองยานศัตรู $HOSTILE|R$ ในระบบดาว $SYSTEM|H$ และกำลังพยายามหลบเลี่ยงพวกมันอยู่!"
  MESSAGE_FLEET_EVADE_HOSTILE_FLEET_TYPE:0 "$TYPE$ $NAME|H$"
- MESSAGE_FLEET_EVADE_HOSTILE_MESSAGE_TYPE_TITLE:0 "Evading Hostile Fleet"
+ MESSAGE_FLEET_EVADE_HOSTILE_MESSAGE_TYPE_TITLE:0 "กำลังหลบเลี่ยงกองยานศัตรู"
  FLEET_LEADER_DEATH:0 "$CLASS|Y$ $LEADER|Y$ ตายเมื่อ $SHIP|Y$ ถูกทำลาย"
  ARMY_LEADER_DEATH:0 "$CLASS|Y$, $LEADER|Y$ ของเราตายขณะบัญชาการ $ARMY|Y$"
  PLANET_LEADER_DEATH:0 "$CLASS|Y$, $LEADER|Y$ ของเราตายที่ดาว $PLANET|Y$"
@@ -311,9 +315,14 @@
  MESSAGE_DEBRIS_ANALYZED_FINISH_BONUS:1 "£$AREA_KEY$£ §Yการวิจัย$AREA$§!: §G+$VAL|0$§! แต้ม"
  MESSAGE_DEBRIS_ANALYZED_FINISH_TECH_PROGRESS:1 "$TECH|Y$ ความคืบหน้า: §G+$VAL|%0$§!"
  MESSAGE_DEBRIS_ANALYZED_FINISH_MESSAGE_TYPE_TITLE:0 "วิเคราะห์เศษซากแล้ว"
+ MESSAGE_DEBRIS_SCAVENGED_FINISH:0 "We have finished scavenging the debris in $SYSTEM|Y$."
+ MESSAGE_DEBRIS_SCAVENGED_FINISH_RESOURCE:0 "£$RESOURCE_KEY$£ §Y$NAME$§!: §G+$VAL$§!"
+ MESSAGE_DEBRIS_SCAVENGED_FINISH_MESSAGE_TYPE_TITLE:0 "Debris Scavenged"
+ MESSAGE_DEBRIS_SCAVENGED_AND_ANALYZED_FINISH:0 "We have finished scavenging and analyzing the debris in $SYSTEM|Y$."
+ MESSAGE_DEBRIS_SCAVENGED_AND_ANALYZED_FINISH_MESSAGE_TYPE_TITLE:0 "Debris Scavenged and Analyzed"
  MESSAGE_ANOMALY_DETECTED_TYPE_TITLE:0 "ความผิดปกติ"
  MESSAGE_WORMHOLE_CLOSED_NO_ACCESS:0 "Wormhole in $FROM|Y$ was closed when opening towards $TARGET|Y$, because it is within the borders of $WHO|Y$."
- MESSAGE_FLEET_LEAVE_SYSTEM_NO_ACCESS:0 "$FLEET|Y$ was forced to return to $RETURN|Y$ from $FROM|Y$, because it is within the borders of $WHO|Y$."
+ MESSAGE_FLEET_LEAVE_SYSTEM_NO_ACCESS:0 "$FLEET|Y$ ถูกบังคับให้กลับไป $RETURN|Y$ จาก $FROM|Y$, เพราะมันอยู่ในอาณาเขตของ $WHO|Y$"
  MESSAGE_WORMHOLE_CLOSED_NO_ACCESS_TITLE:0 "Wormhole Closed"
  MESSAGE_FLEET_LEAVE_SYSTEM_NO_ACCESS_TITLE:0 "ไม่มีการเข้าถึง"
  MESSAGE_REVOLT:1 "The population on planet $PLANET|Y$ is revolting!"
