--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -29,7 +29,7 @@
  MOD_COUNTRY_SENSOR_RANGE_MULT:0 "ระยะเซนเซอร์ของจักรวรรดิ"
  MOD_COUNTRY_EDICT_LENGTH_MULT:2 "ระยะเวลาของประกาศคำสั่ง"
  MOD_COUNTRY_EDICT_LENGTH_MULT_DESC:1 "Affects the duration of all Planetary Edicts enacted within the Empire, increasing or reducing the amount of time they are active."
- MOD_COUNTRY_EDICT_FUND_ADD:0 "กองทุนของประกาศคำสั่ง"
+ MOD_COUNTRY_EDICT_FUND_ADD:0 "กองทุนสำหรับประกาศคำสั่ง"
  MOD_COUNTRY_EDICT_FUND_MULT:0 "$MOD_COUNTRY_EDICT_FUND_ADD$"
  mod_edicts_upkeep_mult:0 "ค่าบำรุงรักษาประกาศคำสั่ง"
  MOD_COUNTRY_ALL_TECH_RESEARCH_SPEED:0 "ความเร็วในการวิจัย"
@@ -56,7 +56,7 @@
  MOD_COUNTRY_RESETTLEMENT_COST_MULT:1 "ค่าใช้จ่ายในการย้ายถิ่นฐานใหม่"
  MOD_POP_CONSUMER_GOODS_MULT:0 "ค่าใช้จ่ายสินค้าอุปโภคบริโภค"
  MOD_POP_CONSUMER_GOODS_ADD:0 "ใช้สินค้าอุปโภคบริโภค"
- MOD_POP_DEFENSE_ARMIES_ADD:0 "กองทัพป้องกันดาวเคราะห์"
+ MOD_POP_DEFENSE_ARMIES_ADD:1 "กองทัพป้องกันดาวเคราะห์ต่อประชากร"
  MOD_POP_HOUSING_USAGE_MULT:0 "การใช้ที่อยู่อาศัยประชากร"
  MOD_POP_HOUSING_USAGE_ADD:0 "$MOD_POP_HOUSING_USAGE_MULT$"
  MOD_POP_HOUSING_USAGE_BASE:0 "$MOD_POP_HOUSING_USAGE_MULT$"
@@ -93,6 +93,8 @@
  MOD_COUNTRY_SUBJECT_INTEGRATION_SPEED_ADD:0 "ความเร็วในการรวมเข้ากับบริวาร"
  MOD_COUNTRY_INTEGRATION_COOLDOWN_MULT:0 "เวลาคูลดาวน์ในการรวมเข้ากับบริวาร"
  MOD_COUNTRY_VASSAL_NAVAL_CAPACITY_CONTRIBUTION_MULT:0 "Vassal Naval Capacity Contribution"
+ MOD_COUNTRY_NAVAL_CAPACITY_CONTRIBUTION_FROM_SUBJECTS_MULT:0 "Subject Naval Capacity Contribution"
+ MOD_COUNTRY_NAVAL_CAPACITY_CONTRIBUTION_TO_OVERLORD_MULT:0 "Naval Capacity Contribution to Overlord"
  MOD_COUNTRY_SUBJECT_TRIBUTE_MULT:0 "ภาษีของบริวาร"
  MOD_COUNTRY_SUBJECT_TECHNOLOGY_SHARING_MULT:0 "การแบ่งปันเทคโนโลยี"
  MOD_COUNTRY_EXPANSION_DISTANCE_MULT:0 "ระยะทางการขยายเขตแดน"
@@ -111,7 +113,8 @@
  MOD_FIRST_CONTACT_SPEED_MULT:0 "First Contact Discovery Speed"
  MOD_FIRST_CONTACT_CLUES_ADD:0 "First Contact Skill"
  MOD_FIRST_CONTACT_DEFENSE_ADD:0 "ความยากในการติดต่อครั้งแรกของเป้าหมาย"
- MOD_COUNTER_INTEL_GAIN_SPEED:0 "Modifies the speed other empires gain intel on you"
+ MOD_COUNTER_INTEL_GAIN_SPEED:1 "Speed of Other Empires' Intel Gain on You"
+ MOD_COUNTRY_SCAVENGE_DEBRIS_MULT:0 "Resources Gained from Scavenging Debris"
  MOD_ADD_BASE_COUNTRY_INTEL:0 "เลเวลพื้นฐานของข่าวกรอง"
  MOD_POP_FERTILITY:0 "การเจริญพันธุ์"
  MOD_POP_HAPPINESS:0 "ความสุข"
@@ -141,10 +144,10 @@
  MOD_POP_ROBOT_BUILD_SPEED_MULT:0 "ความเร็วในการสร้างหุ่นยนต์"
  MOD_POP_ROBOT_BUILD_SPEED_MULT_DESC:0 "Affects the speed at which robotic Pops are built."
  MOD_POP_ROBOT_BUILD_COST_MULT:0 "ค่าใช้จ่ายในการสร้างหุ่นยนต์"
- mod_pop_job_trade_mult:0 "£trade_value£ Trade Value from £job£ Jobs"
- mod_pop_lifestyle_trade_mult:0 "£trade_value£ Trade Value from Living Standards"
- mod_pop_job_amenities_mult:0 "£amenities£ Amenities from £job£ Jobs"
- mod_job_soldier_stability_add:0 "Stability from £job_soldier£ [GetSoldier] Jobs"
+ mod_pop_job_trade_mult:0 "£trade_value£ มูลค่าการค้าจาก £job£ งาน"
+ mod_pop_lifestyle_trade_mult:0 "£trade_value£ มูลค่าการค้าจากมาตรฐานความเป็นอยู่"
+ mod_pop_job_amenities_mult:0 "£amenities£ ความอยู่ดีกินดีจาก £job£ งาน"
+ mod_job_soldier_stability_add:0 "เสถียรภาพจากงาน £job_soldier£ [GetSoldier]"
  MOD_COUNTRY_COLONY_INFLUENCE_COST_MULT:0 "ค่าอิทธิพลที่ใช้ในอาณานิคม"
  MOD_COUNTRY_CLAIM_INFLUENCE_COST_MULT:0 "ค่าอิทธิพลที่ใช้ในการอ้างสิทธิ์"
  MOD_COUNTRY_HOSTILE_CLAIM_INFLUENCE_COST_MULT:0 "Hostile Claim Influence Cost"
@@ -188,7 +191,7 @@
  MOD_PLANET_IMMIGRATION_PULL_MULT:0 "$MOD_PLANET_IMMIGRATION_PULL_ADD$"
  MOD_PLANET_EMIGRATION_PUSH_ADD:0 "ผลักดันการอพยพย้ายออก"
  MOD_PLANET_EMIGRATION_PUSH_MULT:0 "$MOD_PLANET_EMIGRATION_PUSH_ADD$"
- MOD_PLANET_RESETTLEMENT_UNEMPLOYED_DESTINATION_MULT:0 "Automatic Resettlement Destination Chance"
+ MOD_PLANET_RESETTLEMENT_UNEMPLOYED_DESTINATION_MULT:0 "โอกาสในการเปลี่ยนที่ตั้งรกรากใหม่โดยอัตโนมัติ"
  MOD_PLANET_RESETTLEMENT_UNEMPLOYED_DESTINATION_MULT_DESC:0 "This value increases the chance unemployed £pop£ Pops within your empire will spontaneously migrate to this particular colony, so long as it has jobs, housing, and decent habitability."
  MOD_PLANET_RESETTLEMENT_UNEMPLOYED_MULT:0 "โอกาสในการไปตั้งรกรากใหม่โดยอัตโนมัติ"
  MOD_PLANET_RESETTLEMENT_UNEMPLOYED_MULT_DESC:0 "This value increases the chance unemployed £pop£ Pops will spontaneously migrate to other colonies within your empire with jobs, housing, and decent habitability."
@@ -383,6 +386,7 @@
  mod_planet_buildings_energy_upkeep_mult:0 "Building £energy£ Energy Upkeep"
  mod_planet_districts_cost_mult:0 "ค่าใช้จ่ายเขต"
  mod_planet_districts_upkeep_mult:0 "ค่าบำรุงรักษาเขต"
+ mod_planet_districts_energy_upkeep_mult:0 "District Energy Upkeep"
  mod_planet_districts_cities_upkeep_mult:0 "ค่าบำรุงรักษาเขตเมือง"
  mod_planet_districts_mines_cost_mult:0 "ค่าใช้จ่ายเขตเหมืองแร่"
  mod_planet_districts_farms_cost_mult:0 "ค่าใช้จ่ายเขตการเกษตร"
@@ -514,6 +518,7 @@
  rare_crystals_deficit:0 "ขาดแคลน$rare_crystals$"
  exotic_gases_deficit:0 "ขาดแคลน$exotic_gases$"
  unity_deficit:0 "$unity$ Shortage"
+ dark_matter_deficit:0 "$sr_dark_matter$ Shortage"
  mod_country_base_energy_produces_mult_DESC:0 "Our total empire Energy production is adjusted by this value."
  mod_country_base_minerals_produces_mult_DESC:0 "Our total empire Minerals production is adjusted by this value."
  mod_planet_resource_food_add:0 "อาหารบนดาวเคราะห์"
@@ -588,7 +593,7 @@
  mod_country_traditions_influence_produces_add:0 "$MOD_COUNTRY_INFLUENCE_GAIN_ADD$"
  mod_country_ruler_influence_produces_add:0 "$MOD_COUNTRY_INFLUENCE_GAIN_ADD$"
  mod_country_ethic_influence_produces_add:0 "$MOD_COUNTRY_INFLUENCE_GAIN_ADD$"
- mod_country_power_projection_influence_produces_add:1 "Max £influence£ $influence$ from $country_power_projection$"
+ mod_country_power_projection_influence_produces_add:1 "£influence£ $influence$ สูงสุดจาก $country_power_projection$"
  mod_country_power_projection_influence_produces_mult:1 "£influence£ $influence$ from $country_power_projection$"
  mod_pop_ethic_pacifist_attraction_mult:0 "การดึงดูดจริยธรรมที่รักสันติ"
  mod_pop_ethic_militarist_attraction_mult:0 "การดึงดูดจริยธรรมที่ชอบสงคราม"
@@ -681,6 +686,7 @@
  mod_weapon_type_strike_craft_weapon_damage_mult:0 "พลังโจมตีของยานลูก"
  mod_weapon_type_strike_craft_weapon_fire_rate_mult:0 "ความเร็วในการโจมตีของยานลูก"
  mod_weapon_type_strike_craft_speed_mult:0 "ความเร็วของยานลูก"
+ mod_weapon_swarm_weapon_fire_rate_mult:0 "Prethoryn Swarm Weapon Attack Speed"
  vultaum_asteroid_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (ผู้มาก่อน)"
  vultaum_asteroid_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะล้มเหลว (ผู้มาก่อน)"
  vultaum_gasgiant_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (ผู้มาก่อน)"
@@ -994,6 +1000,7 @@
  opinion_defensive_pact:0 "สนธิสัญญาป้องกันตนเอง"
  opinion_broke_alliance:0 "ยกเลิกสนธิสัญญาพันธมิตร"
  opinion_broke_defensive_pact:0 "ยกเลิกสนธิสัญญาป้องกันตนเอง"
+ opinion_broke_research_agreement:0 "Broke Research Agreement"
  opinion_broke_non_aggression_pact:0 "ทำลายสนธิสัญญาไม่รุกราน"
  opinion_broke_commercial_pact:0 "ยกเลิกสนธิสัญญาการค้า"
  opinion_broke_migration_pact:0 "ทำลายสนธิสัญญาการย้ายถิ่นฐาน"
@@ -1085,6 +1092,7 @@
  triggered_authoritarian_opinion_barbaric_despoilers:0 "$civic_barbaric_despoilers$"
  triggered_pacifist_opinion_barbaric_despoilers:0 "$civic_barbaric_despoilers$"
  triggered_fe_opinion_barbaric_despoilers:0 "$civic_barbaric_despoilers$"
+ triggered_opinion_relic_omnicodex:0 "$r_omnicodex$"
  capital:0 "โลกศูนย์กลางจักรวรรดิ"
  capital_desc:0 "The Capital planet of an interstellar empire is a vast complex of government buildings, bureaus and agency headquarters."
  distance_from_capital:0 "ระยะทางจากศูนย์กลาง"
@@ -1249,7 +1257,13 @@
  ancient_weapon_desc:0 "It seems that some long-forgotten race once build some kind of huge weapon in orbit above this world. While it doesn't work, indeed it doesn't appear to have been completed, we can likely learn a few things by studying it."
  terraforming_candidate:0 "สามารถปรับสภาพดาวได้"
  terraforming_candidate_desc:0 "แม้ว่าจะแห้งแล้งและไร้สิ่งมีชีวิต แต่ดาวดวงนี้ก็มีน้ำในรูปแบบที่เป็นน้ำแข็งและครั้งหนึ่งอาจเคยเป็นที่ตั้งของระบบนิเวศที่เจริญรุ่งเรือง ด้วยเทคโนโลยีที่เหมาะสม มันสามารถปรับเปลี่ยนให้กลายเป็นโลกที่อาศัยอยู่ได้"
- terraforming_candidate_tooltip:0 "Once we have researched the £society£ §Y$tech_climate_restoration$§! technology, we will be able to terraform this planet into a habitable world."
+ terraforming_candidate_tooltip:0 "เมื่อเราค้นคว้าเทคโนโลยี £society£ §Y$tech_climate_restoration$§! เสร็จแล้ว เราจะสามารถแปลงโฉมดาวเคราะห์ดวงนี้ให้กลายเป็นโลกที่อยู่อาศัยได้"
+ frozen_terraforming_candidate:0 "Frozen Terraforming Candidate"
+ frozen_terraforming_candidate_desc:0 "Though cold to the point of being unable to sustain life, the frozen water on this world could allow us to terraform it into a habitable world, if we can find the right method."
+ frozen_terraforming_candidate_tooltip:0 "If we pick the §Y$ap_hydrocentric$§! ascension perk and research the £society£ §Y$tech_climate_restoration$§! technology, we will be able to terraform this planet into a habitable world."
+ toxic_terraforming_candidate:0 "Toxic Terraforming Candidate"
+ toxic_terraforming_candidate_desc:0 "Though the noxious gases on this world make it unfit for life, with enough effort they can be broken down into less lethal compounds, eventually allowing colonization."
+ toxic_terraforming_candidate_tooltip:0 "If we pick the §Y$ap_detox$§! ascension perk, we will be able to terraform this planet into a habitable world."
  ultra_rich:1 "Exceptional Quality Minerals"
  ultra_rich_desc:1 "The exceptional quality of the minerals in this planet's crust provides a truly staggering opportunity for mining."
  mineral_poor:1 "Poor Quality Minerals"
