--- a/mod/thmod/localisation/english/necroids_l_english.yml
+++ b/mod/thmod/localisation/english/necroids_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  origin_necrophage:0 "ผีดิบเนโครเฟจ"
- origin_necrophage_desc:0 "This civilization evolved as a parasite, feeding off other sapient life forms for growth. As it extends its reach across the galaxy, other species will come to be seen either as apprentices to be brought into the fold, or merely as food to sustain its growing might."
+ origin_necrophage_desc:1 "This civilization evolved as a parasite, forced to feed off other sapient life forms to sustain itself. As it arrives on the galactic stage, other species will either be brought into the fold, or become its food. For the necrophage, there can be no other way."
  civic_tooltip_necrophage_effects:1 "- สามารถเปลี่ยน £pops£ ประชากรเผ่าพันธุ์อื่นให้เป็นเนโครเฟจ (§Hเผ่าพันธุ์หลัก§!) ได้\n- ประชากรเนโครเฟจเท่านั้นที่สามารถเป็น §Hผู้นำ§! หรือรับ §Hตำแหน่งงานผู้ปกครอง§!\n- เริ่มต้นด้วย £pops£ ประชากรชั้นรองจำนวนหนึ่ง (เผ่าพันธุ์รองที่จะกลายเป็นเนโครเฟจ)\n- รับประกันดาวเคราะห์ที่อาศัยอยู่ได้ ถูกแทนที่ด้วย §Hอารยธรรมดึกดำบรรพ์§!"
  civic_necrophage_secondary_species:0 "เผ่าพันธุ์ชั้นรองก่อนที่จะกลายเป็นเนโครเฟจ"
  trait_necrophage:0 "เนโครเฟจ"
@@ -15,10 +15,10 @@
  building_necrophage_house_of_apotheosis_desc:0 "A house of untold splendor where those awaiting their apotheosis as [This.Owner.GetSpeciesNamePlural] can spend their final days in their original forms in comfort."
  building_necrophage_house_of_apotheosis_desc_hive:0 "A house of untold splendor where we have gone to great lengths to ensure that those awaiting their transformation into [This.Owner.GetAdj] drones can spend their final days outside the Hive in comfort."
  job_necro_apprentice_effect_desc_base:0 "Once every §Y10§! years, £job_necro_apprentice£ $job_necro_apprentice_plural$ are transformed into §Y[This.Owner.GetSpeciesNamePlural]§! in an §YElevation Ritual§!."
- job_necro_apprentice_effect_desc:2 "£job_necro_apprentice£ $job_necro_apprentice_plural$ turn £consumer_goods£ §Y$consumer_goods$§! and £food£ §Y$food$§! into £unity£ §Y$unity$§! and £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§!.\n$job_necro_apprentice_effect_desc_base$"
- job_necro_apprentice_effect_lithoid_desc:1 "£job_necro_apprentice£ $job_necro_apprentice_plural$ turn £consumer_goods£ §Y$consumer_goods$§! and £minerals£ §Y$minerals$§! into £unity£ §Y$unity$§! and £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§!.\n$job_necro_apprentice_effect_desc_base$"
- job_necro_apprentice_effect_hive_desc:0 "£job_necro_apprentice£ $job_necro_apprentice_plural$ turn £food£ §Y$food$§! into £unity£ §Y$unity$§! and £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§!.\n$job_necro_apprentice_effect_desc_base$"
- job_necro_apprentice_effect_hive_lithoid_desc:0 "£job_necro_apprentice£ $job_necro_apprentice_plural$ turn £minerals£ §Y$minerals$§! into £unity£ §Y$unity$§! and £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§!.\n$job_necro_apprentice_effect_desc_base$"
+ job_necro_apprentice_effect_desc:2 "£job_necro_apprentice£ $job_necro_apprentice_plural$ เปลี่ยน £consumer_goods£ §Y$consumer_goods$§! และ £food£ §Y$food$§! เป็น £unity£ §Y$unity$§! และ £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§!\n$job_necro_apprentice_effect_desc_base$"
+ job_necro_apprentice_effect_lithoid_desc:1 "£job_necro_apprentice£ $job_necro_apprentice_plural$ เปลี่ยน £consumer_goods£ §Y$consumer_goods$§! และ £minerals£ §Y$minerals$§! เป็น £unity£ §Y$unity$§! และ £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§!\n$job_necro_apprentice_effect_desc_base$"
+ job_necro_apprentice_effect_hive_desc:0 "£job_necro_apprentice£ $job_necro_apprentice_plural$ เปลี่ยน £food£ §Y$food$§! เป็น £unity£ §Y$unity$§! และ £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§!\n$job_necro_apprentice_effect_desc_base$"
+ job_necro_apprentice_effect_hive_lithoid_desc:0 "£job_necro_apprentice£ $job_necro_apprentice_plural$ เปลี่ยน £minerals£ §Y$minerals$§! เป็น £unity£ §Y$unity$§! และ £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§!\n$job_necro_apprentice_effect_desc_base$"
  NO_CULTURE_SHOCK:0 "$TRIGGER_FAIL$§RPlanet is not experiencing §Y$culture_shock_bronze_age$§!§!"
  job_necro_apprentice:0 "Necrophyte"
  job_necro_apprentice_plural:0 "Necrophytes"
@@ -205,11 +205,12 @@
  job_death_chronicler:0 "Death Chronicler"
  job_death_chronicler_plural:0 "Death Chroniclers"
  job_death_chronicler_desc:0 "Entropy is the domain of these scholars, who observe and record death and its effects in all their various expressions."
- job_death_chronicler_effect_desc:1 "£job_death_chronicler£ $job_death_chronicler_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £unity£ §Y$unity$§!, £society£ §Y$society_research$§! and £stability£ §YStability§!"
+ job_death_chronicler_effect_desc:2 "£job_death_chronicler£ $job_death_chronicler_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £unity£ §Y$unity$§!, [GetCultureWorkerSpiMatOutput][GetCultureWorkerEgalAuthOutput][GetCultureWorkerMilPacOutput][GetCultureWorkerXenoOutput] and £stability£ §YStability§!.\n\n£job_death_chronicler£ Death Chroniclers' effects vary depending on the Empire's ethics."
+ job_death_chronicler_simple_effect_desc:0 "£job_death_chronicler£ $job_death_chronicler_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £unity£ §Y$unity$§!, £stability£ §YStability§! and inherit the §YEthics-based§! modifiers of §Y£job_culture_worker£ $job_culture_worker_plural$§!."
  job_chronicle_drone:0 "Chronicle Drone"
  job_chronicle_drone_plural:0 "Chronicle Drones"
  job_chronicle_drone_desc:0 "These specialized drones turn their thoughts to entropy, researching terminal decay as a counterpoint to our own, continued existence."
- job_chronicle_drone_effect_desc:2 "£job_chronicle_drone£ $job_chronicle_drone_plural$ turn £energy£ §Y$energy$§! and £minerals£ §Y$minerals$§! into £unity£ §Y$unity$§!, £society£ §Y$society_research$§! and £stability£ §YStability§!"
+ job_chronicle_drone_effect_desc:3 "£job_chronicle_drone£ $job_chronicle_drone_plural$ เปลี่ยน £energy£ §Y$energy$§! และ £minerals£ §Y$minerals$§! เป็น £unity£ §Y$unity$§!, £stability£ §YStability§! และ $r_amenities$"
  mod_job_death_chronicler_add:0 "งาน$job_death_chronicler$"
  mod_job_death_chronicler_per_pop:0 "§G+1§! อาชีพ $job_death_chronicler$ ต่อ $VALUE$ ประชากร"
  mod_job_death_chronicler_per_pop_short:0 "\n§G+1§! £mod_job_death_chronicler_add£ ต่อ $VALUE$ £pop£"
@@ -219,7 +220,7 @@
  action.62.memorialist.a:0 "They shall be remembered."
  civic_permanent_employment:0 "การจ้างงานแบบถาวร"
  civic_permanent_employment_desc:0 "This Megacorporation has ensured that its employees will never be out of a job. Ever. After the employee's time is up, they will be repurposed for simpler tasks so that they can still provide for their families and pay off their debts."
- civic_tooltip_permanent_employment_effects:2 "Can build £building£ §Y$building_posthumous_employment_center$§!\n$job_reassigner_effect_desc$\n\nGrants access to the £building£ §Y$holding_reemployment_center$§! Holding\nDefeated organic Leviathans can sometimes be resurrected."
+ civic_tooltip_permanent_employment_effects:3 "Can build £building£ §Y$building_posthumous_employment_center$§!\n$job_reassigner_effect_desc$\n\nGrants access to the £building£ §Y$holding_reemployment_center$§! Holding.\n\nDefeated organic Leviathans can sometimes be resurrected."
  job_reassigner:0 "Reassigner"
  job_reassigner_desc:0 "Reassigners ensure that once a Megacorporation's citizen has passed on, their remains will stay at work until the fulfillment of their contract."
  job_reassigner_plural:0 "Reassigners"
