--- a/mod/thmod/localisation/english/nemesis_intel_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_intel_l_english.yml
@@ -143,7 +143,7 @@
  PACT_galactic_emperor:0 "Galactic Emperor"
  PACT_galactic_emperor_heightened_security:0 "Heightened Security"
  PACT_closed_borders:0 "Closed Borders"
- PACT_overlord:0 "Overlord"
+ PACT_overlord:0 "เจ้าเหนือหัว"
  PACT_subject:0 "Subject"
  PACT_commercial_pact:0 "Commercial Pact"
  PACT_migration_treaty:0 "Migration Treaty"
@@ -962,6 +962,11 @@
  any_system_planet_trigger:0 "Any Planet in System"
  count_system_planet_trigger:0 "Number of Planets in System$CONDITIONS$ $IS_NOT$ $COMPARATOR$ $NUM|Y$"
  count_system_planet_all_trigger:0 "$IS_ALL_NOT$ Planets in System fulfill the following conditions"
+ effect_random_system_colony:0 "Random Colony in System"
+ effect_every_system_colony:0 "Every Colony in System"
+ any_system_colony_trigger:0 "Any Colony in System"
+ count_system_colony_trigger:0 "Number of Colonies in System$CONDITIONS$ $IS_NOT$ $COMPARATOR$ $NUM|Y$"
+ count_system_colony_all_trigger:0 "$IS_ALL_NOT$ Colonies in System fulfill the following conditions"
  effect_random_planet_within_border:0 "Random Planet within Border"
  effect_every_planet_within_border:0 "Every Planet within Border"
  any_planet_within_border_trigger:0 "Any Planet within Border"
