--- a/mod/thmod/localisation/english/overlord_mega_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_mega_l_english.yml
@@ -12,7 +12,7 @@
  STARBASE_STATION_NAME_FORMAT_NON_PRIMARY:0 "$PLANET$ Station"
  tech_orbital_ring_tier_1:0 "Orbital Rings"
  tech_orbital_ring_tier_1_desc:0 "Allows the construction of massive, band-shaped starbases in stable orbit around colonized planets."
- requires_technology_orbital_ring_tier_1:0 "$TRIGGER_FAIL$Requires the £engineering£ §Y$tech_orbital_ring_tier_1$§! technology."
+ requires_technology_orbital_ring_tier_1:0 "$TRIGGER_FAIL$ต้องการเทคโนโลยี £engineering£ §Y$tech_orbital_ring_tier_1$§! "
  CAN_CREATE_ORBITAL_STATION_ALREADY_EXISTS_ORBITAL_DEFENCE:1 "An orbital defense station is already orbiting this $CLASS$"
  CANNOT_BOMBARD_ORBITAL_DEFENCE_PROTECTED:0 "Cannot bombard a planet that is protected by an orbital defence station"
  requires_not_hostile_or_primitive:0 "$TRIGGER_FAIL$Cannot build around hostile or primitive planets."
@@ -20,6 +20,7 @@
  tech_quantum_catapult_desc:1 "A §YQuantum Catapult§! harnesses the power of a Neutron Star or Pulsar to twist the fabric of space, skipping a fleet across great distances."
  requires_neutron_star_or_pulsar:0 "$TRIGGER_FAIL$Must be built around a $pc_neutron_star$ or $pc_pulsar$."
  requires_no_existing_quantum_catapult:0 "$TRIGGER_FAIL$Cannot build more than one Quantum Catapult."
+ requires_no_existing_quantum_catapul_two:0 "$TRIGGER_FAIL$Cannot build more than two Quantum Catapults."
  quantum_catapult_0_MEGASTRUCTURE_DETAILS:1 "A device that focuses the forces of a Neutron Star or Pulsar in order to twist space and skip a fleet across great distances."
  quantum_catapult_0_CONSTRUCTION_INFO_DELAYED:1 "Early iterations of the Quantum Catapult may cause fleets to arrive in systems §Houtside§! their intended destination. This '§Yscatter radius§!' can be reduced with subsequent upgrades."
  quantum_catapult_0:0 "$quantum_catapult_1$ Site"
@@ -49,6 +50,7 @@
  FLEET_ORDER_QUANTUM_CATAPULT_NOT_SAME_SYSTEM:0 "§RSelected fleets are not in the same system§!"
  FLEET_ORDER_NEEDS_GALAXY_MODE:0 "§RCan only be engaged in galaxy view!§!"
  requires_technology_hyper_relays:0 "$TRIGGER_FAIL$Requires technology £physics£ §Y$tech_hyper_relays$§!."
+ requires_hyperlane:0 "$TRIGGER_FAIL$§RThis system does not have any Hyperlanes.§!"
  QUANTUM_CATAPULT_COUNTRY_CANNOT_USE:0 "$TRIGGER_FAIL$ The §Y[From.GetName]§! has denied us access to their Quantum Catapult."
  quantum_catapult_ruined_slingshot:0 "$quantum_catapult_ruined$"
  quantum_catapult_ruined_slingshot_DESC:0 "$quantum_catapult_ruined_DESC$"
@@ -126,15 +128,15 @@
  sm_ring_alloys_hub_desc:1 "Alloys from the surface are further processed in orbit, creating usable materials from what would otherwise be wasted by-products."
  sm_ring_trade_hub:0 "The Giga-Mall"
  sm_ring_trade_hub_desc:1 "Moving all shopping and trade facilities to the Orbital Ring means our Clerks can facilitate more business, more effectively than ever before."
- sm_ring_trade_hub_effect:0 "£amenities£ Amenities from £job_clerk£ $job_clerk_plural$: §G+1§!"
+ sm_ring_trade_hub_effect:0 "£amenities£ ความอยู่ดีกินดีจาก £job_clerk£ $job_clerk_plural$: §G+1§!"
  sm_ring_bureaucracy_hub:0 "Orbital Filing System"
  sm_ring_bureaucracy_hub_desc:1 "Efficiency and progress can be ours once more, now that our Administrators have near instant access to the paperwork that defines their lives."
  sm_ring_synapse_hub:0 "Synaptic Relays"
  sm_ring_synapse_hub_desc:0 "Portions of the Orbital Ring have been modified to enhance synaptic signals, improving control over drones on the surface."
- sm_ring_synapse_hub_effect:0 "£amenities£ Amenities from £job_synapse_drone£ $job_synapse_drone_plural$: §G+1§!"
+ sm_ring_synapse_hub_effect:1 "£unity£ เอกภาพจาก £job_synapse_drone£ $job_synapse_drone_plural$: §G+1§!"
  sm_ring_maintenance_hub:0 "Orbital Maintenance Drops"
  sm_ring_maintenance_hub_desc:0 "Prepackaged pods of maintenance material - and the drones necessary to distribute them - can be dropped from orbit anywhere they are needed, at a moment's notice."
- sm_ring_maintenance_hub_effect:0 "£amenities£ Amenities from £job_maintenance_drone£ $job_maintenance_drone_plural$: §G+1§!"
+ sm_ring_maintenance_hub_effect:0 "£amenities£ ความอยู่ดีกินดีจาก £job_maintenance_drone£ $job_maintenance_drone_plural$: §G+1§!"
  over.1.name:0 "$quantum_catapult_1$"
  over.1.desc:1 "The first stage of our $quantum_catapult_3$ is now complete. A precise arrangement of torsion lenses gains charge from the star, and can release this energy in an erratic fashion to send ships across great distances."
  over.5.name:0 "$quantum_catapult_2$"
