--- a/mod/thmod/localisation/english/pop_factions_l_english.yml
+++ b/mod/thmod/localisation/english/pop_factions_l_english.yml
@@ -17,7 +17,7 @@
  pft_xenoist_desc:1 "Xenoist Factions desire for greater value to be put on alien life and culture. They like diverse populations and interacting with other species. They dislike species-wide Slavery and Purges.\n\n§LXenophile Ethos§!"
  pft_prosperity:0 "ฝ่ายรุ่งเรือง"
  pft_prosperity_desc:2 "Prosperity Factions desire economic growth and the acquisition of resources. They like energy credits and strategic resources, and they dislike armed conflicts that disrupt internal development.\n\n§LPacifist Ethos§!"
- pft_democratic_election_1:0 "Democratic Party Faction"
+ pft_democratic_election_1:0 "พรรคประชาธิปไตย"
  pft_democratic_election_1_desc:0 "Democratic Party Factions emerge during Empire Elections and and dissipate shortly thereafter, serving as a means to put certain popular Leaders in the political limelight."
  pft_democratic_election_2:0 "$pft_democratic_election_1$"
  pft_democratic_election_2_desc:0 "$pft_democratic_election_1_desc$"
@@ -187,7 +187,7 @@
  IMPERIALIST_ADOPT_OPPRESSIVE_SUBJUGATION_POLICY:0 "$IMPERIALIST_OPPRESSIVE_SUBJUGATION_POLICY$"
  IMPERIALIST_OPPRESSIVE_SUBJUGATION_POLICY_DESC:0 "An iron fist in an iron glove. Making sure that our subjects know their place will please the [Root.GetName]."
  ISOLATIONIST_PHILOSOPHY:0 "การป้องกันที่แข็งแกร่ง"
- ISOLATIONIST_PHILOSOPHY_DESC:1 "Disallowing §YUnrestricted Wars§! will please the [Root.GetName]."
+ ISOLATIONIST_PHILOSOPHY_DESC:1 "การไม่อนุญาตให้ใช้ §Yสงครามที่ไม่จำกัด§! จะทำให้ [Root.GetName] พอใจ"
  ISOLATIONIST_NO_PHILOSOPHY:0 "$ISOLATIONIST_PHILOSOPHY$"
  ISOLATIONIST_NO_AGGRESSIVE_WAR:0 "การรุกรานที่ไม่เต็มใจ"
  ISOLATIONIST_AGGRESSIVE_WAR:0 "$ISOLATIONIST_NO_AGGRESSIVE_WAR$"
