--- a/mod/thmod/localisation/english/traditions_l_english.yml
+++ b/mod/thmod/localisation/english/traditions_l_english.yml
@@ -164,7 +164,7 @@
  tr_synchronicity_instinctive_synchronization_desc:2 "§Y$job_synapse_drone_plural$§! ผลิต §Y2§! £mod_pop_amenities_usage_no_happiness_mult£ ความอยู่ดีกินดี"
  tr_synchronicity_instinctive_synchronization_delayed:0 "Our growing hive has greater demands on synchronized work and development."
  tr_synchronicity_integrated_preservation:1 "การบำรุงรักษาแบบบูรณาการ"
- tr_synchronicity_integrated_preservation_desc:7 "§Y$job_coordinator_plural$§! reduce §Y$MOD_PLANET_CRIME_NO_HAPPINESS_ADD$§! by §G2§!\nAutomatic Resettlement Chance: §G+30%§!"
+ tr_synchronicity_integrated_preservation_desc:7 "§Y$job_coordinator_plural$§! ลด §Y$MOD_PLANET_CRIME_NO_HAPPINESS_ADD$§! §G2§!\nโอกาสในการไปตั้งรกรากใหม่โดยอัตโนมัติ: §G+30%§!"
  tr_synchronicity_integrated_preservation_delayed:5 "Our growing network requires regular maintenance and debugging, therefore more resources shall be devoted to our $job_coordinator_plural$."
  tr_synchronicity_collective_reasoning:1 "การใช้เหตุผลร่วมกัน"
  tr_synchronicity_collective_reasoning_delayed:1 "By synchronizing groups of Drones, more efficient use of planetary infrastructure can be achieved!"
@@ -236,7 +236,7 @@
  tr_supremacy_overwhelming_force_desc:0 "§Y$MOD_SHIP_FIRE_RATE_MULT$§! เพิ่มขึ้น §G+10%§! และ §Y$MOD_SHIP_ORBITAL_BOMBARDMENT_MULT$§! เพิ่มขึ้น §G+20%§!"
  tr_supremacy_overwhelming_force_delayed:1 "Everything must be brought to bear on the enemy if victory is to be assured. A swift and decisive attack can paradoxically save lives that would have been needlessly lost in a prolonged engagement."
  tr_supremacy_finish:0 "วัฒนธรรมความยิ่งใหญ่สำเร็จ"
- tr_supremacy_finish_desc:0 "ปลดล็อกนโยบาย §Yหลักแห่งสงคราม§!\nปลดล็อกการยกระดับ: §G+1§!"
+ tr_supremacy_finish_desc:0 "ปลดล็อกนโยบาย §Yหลักการสงคราม§!\nปลดล็อกการยกระดับ: §G+1§!"
  tradition_diplomacy:0 "การทูต"
  tradition_diplomacy_desc:0 "วิธีในการทําลายศัตรูของคุณที่แน่นอนที่สุด คือการทําให้พวกเขาเป็นเพื่อนของคุณ"
  tr_diplomacy_adopt:0 "วัฒนธรรมการทูต"
@@ -263,7 +263,7 @@
  tr_diplomacy_diplomatic_networking_gestalt_delayed:0 "Incorporating our diplomatic processes into every aspect of our relations with the other will not just benefit our diplomacy: it will also improve the cohesion of our own decision-making, and ultimately of the entire [This.GetGovernmentName] itself."
  diplomatic_networking:0 "$tr_diplomacy_diplomatic_networking$"
  tr_diplomacy_direct_diplomacy:1 "การทูตโดยตรง"
- tr_diplomacy_direct_diplomacy_delayed:1 "We believe that the best way to establish trust is to engage in a open, honest and direct way."
+ tr_diplomacy_direct_diplomacy_delayed:2 "We believe that the best way to establish trust is to engage in an open, honest and direct way."
  tr_diplomacy_eminent_diplomats:0 "นักการทูตที่มีชื่อเสียง"
  tr_diplomacy_eminent_diplomats_desc:0 "การยอมรับทางการฑูต: §G+5§!\nทูต §Yปรับปรุงความสัมพันธ์§! มีโอกาส §G1%§! ในแต่ละเดือนในการได้รับ §Yบุญคุณ/การสนับสนุน§!"
  tr_diplomacy_eminent_diplomats_gestalt:0 "โดรนทูตแบบปรับปรุง"
@@ -475,7 +475,7 @@
  tr_unyielding_federations_finish:0 "$tr_unyielding_finish$"
  tr_unyielding_federations_finish_desc:0 "$MOD_STARBASE_DEFENSE_PLATFORM_CAPACITY_MULT$ §G+50%§!\n$mod_starbases_upkeep_mult$ §G-20%§!\nGrants access to the §Y$military_federation$§! Federation type.\nAscension Perks Unlocked: §G+1§!"
  tr_unyielding_resistance_is_frugal:0 "ความอดทนนั้นประหยัด"
- tr_unyielding_resistance_is_frugal_desc:1 "£defense_army£ §YDefense Armies§! now produce §Y0.5§! £unity£ Unity. In addition, §Y$MOD_ARMY_DEFENSE_HEALTH_MULT$§! is increased by §G+25%§!."
+ tr_unyielding_resistance_is_frugal_desc:1 "£defense_army£ §Yกองทัพป้องกัน§! ตอนนี้สามารถผลิต §Y0.5§! £unity£ เอกภาพ นอกจากนี้ §Y$MOD_ARMY_DEFENSE_HEALTH_MULT$§! เพิ่มขึ้น §G+25%§!"
  tr_unyielding_resistance_is_frugal_hive:0 "$tr_unyielding_resistance_is_frugal$"
  tr_unyielding_resistance_is_frugal_machine:0 "$tr_unyielding_resistance_is_frugal$"
  tr_unyielding_resistance_is_frugal_delayed:0 "Our people take great comfort in the strength of the bulwarks that guard our planets, and view them as vital to ensuring a more prosperous future."
@@ -516,7 +516,7 @@
  requires_ap_the_flesh_is_weak:1 "$TRIGGER_FAIL$ต้องการการยกระดับ §Y$ap_the_flesh_is_weak$§!"
  requires_not_ap_the_flesh_is_weak:1 "$TRIGGER_FAIL$อาจไม่มีการยกระดับ §Y$ap_the_flesh_is_weak$§!"
  requires_finished_cybernetics_project:1 "$TRIGGER_FAIL$Must have finished §Yร่างกายเป็นสิ่งที่อ่อนแอ§! special project."
- requires_ap_mind_over_matter:2 "$TRIGGER_FAIL$Requires the §Y$ap_mind_over_matter$§! Ascension Perk or the §Y$origin_shroudwalker_apprentice$§! Origin."
+ requires_ap_mind_over_matter:2 "$TRIGGER_FAIL$ต้องการการยกระดับ §Y$ap_mind_over_matter$§! หรือมีจุดเริ่มต้น §Y$origin_shroudwalker_apprentice$§!"
  requires_not_ap_mind_over_matter:1 "$TRIGGER_FAIL$อาจไม่มีการยกระดับ §Y$ap_mind_over_matter$§!"
  allow_decision_mastery_of_nature:0 "§Hปลดล็อกการตัดสินใจ:§! ความเชี่ยวชาญในธรรมชาติ"
  describe_decision_mastery_of_nature:0 "§Eนี่คือการตัดสินใจที่เพิ่มจำนวนเขตสูงสุดที่ดาวเคราะห์สามารถรองรับได้ §Y2§! (สามารถทำได้เพียงครั้งเดียวบนดาวเคราะห์แต่ละดวง)§!"
@@ -600,7 +600,7 @@
  ap_hive_worlds_desc:0 "เราจะสร้างโลกที่มีชีวิตซึ่งเป็นส่วนหนึ่งของรังเหมือนกับโดรนที่อาศัยอยู่ด้วยกัน"
  ap_shared_destiny:0 "โชคชะตาร่วมกัน"
  ap_shared_destiny_desc:0 "เมื่อเราขึ้นไปจุดที่สูงขึ้นเรื่อยๆเราต้องไม่ทิ้งคนที่รับใช้เราด้วยความภักดี อนาคตอันรุ่งโรจน์ของจักรวรรดิเราหมายถึงการมีโชคชะตาร่วมกันเสมอ"
- ap_shared_destiny_effect:0 "Your §YSubjects§! do not suffer $r_loyalty$ penalties from you having multiple Subjects."
+ ap_shared_destiny_effect:0 "§Yจักรวรรดิที่เป็นบริวาร§! ของคุณไม่ได้รับโทษ $r_loyalty$ จากการที่คุณมีหลายจักรวรรดิบริวาร(เมืองขึ้น)"
  ap_world_shaper_desc:0 "การกำหนดรูปร่างและปรับเปลี่ยนระบบนิเวศของโลกทั้งใบให้เป็นอย่างอื่นอย่างระมัดระวังนั้นไม่ได้แตกต่างจากศิลปินที่ปั้นรูปปั้นจากดิน"
  ap_master_builders_desc:0 "การสร้างโครงสร้างขนาดใหญ่ต้องใช้ทรัพยากรและการวางแผนจำนวนมากอย่างไม่เคยปรากฏมาก่อน และเรากำลังเริ่มต้นใหม่ในสาขาวิศวกรรมมหภาค"
  ap_imperial_prerogative_desc:0 "เมื่ออารยธรรมของเราเติบโตขึ้นเรื่อยๆ ดังนั้นการเต้นของหัวใจก็ต้องขยายออกไปด้วย ระบบอื่นๆจะถูกวางไว้ภายใต้การควบคุมโดยตรงของเรา"
@@ -630,5 +630,5 @@
  ap_galactic_wonders_utopia_and_megacorp:2 "$ap_galactic_wonders$"
  ap_galactic_wonders_utopia_and_megacorp_desc:1 "$ap_galactic_wonders_desc$"
  ap_technological_ascendancy_rare:2 "§Mเทคโนโลยีหายาก§! ตอนนี้มีอัตรา §Y1.5§! เท่าของอัตราปกติ เอฟเฟกต์นี้จะเปลี่ยนโอกาส §Y1%§! ให้เป็น §Y1.5%§!"
- ap_grasp_the_void_tech_effect:0 "§YFTL travel technologies§! now appear at §Y1.5§! times the normal rate."
+ ap_grasp_the_void_tech_effect:0 "มีอัตราการคิดค้นหรือค้นพบ §Yเทคโนโลยีที่เกี่ยวกับการเดินทางเร็วกว่าแสง (FTL)§! เป็น §Y1.5§! เท่าจากอัตราปกติ"
  requires_not_shroudwalker_apprentice:0 "$TRIGGER_FAIL$May not have the §Y$origin_shroudwalker_apprentice$§! Origin."
