--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -130,7 +130,7 @@
  PLANET_IS_RINGWORLD:0 "เป็นโลกวงแหวน"
  PLANET_IS_NOT_RINGWORLD:0 "ไม่เป็นโลกวงแหวน"
  HAS_NOT_STRATEGIC_RESOURCE_BOOL:0 "ไม่มีทรัพยากรเชิงยุทธศาสตร์"
- HAS_STRATEGIC_RESOURCE_BOOL:0 "Has a Strategic Resource"
+ HAS_STRATEGIC_RESOURCE_BOOL:0 "มีทรัพยากรเชิงยุทธศาสตร์"
  HAS_NOT_STRATEGIC_RESOURCE:0 "ไม่มี §Y$RESOURCE$§!"
  HAS_STRATEGIC_RESOURCE:0 "มี §Y$RESOURCE$§!"
  HAS_TECHNOLOGY:0 "มี $TECHNAME|Y$"
@@ -569,6 +569,12 @@
  HAS_NOT_TRUCE_TRIGGER:0 "$COUNTRY|Y$ ไม่มีการพักรบกับ $TARGET|Y$"
  HAS_TRUCE_TRIGGER:0 "$COUNTRY|Y$ has truce with $TARGET|Y$"
  SET_LEADER_AGE_EFFECT:0 "Change the age to $AGE|Y$"
+ SET_LEADER_IMMORTAL_EFFECT:0 "Becomes immortal"
+ SET_LEADER_MORTAL_EFFECT:0 "Becomes mortal"
+ IS_IMMORTAL_TRIGGER:0 "Is immortal"
+ IS_NOT_IMMORTAL_TRIGGER:0 "Is mortal"
+ IS_JOB_OF_CATEGORY:0 "$JOB|Y$ is of the $CAT|Y$ Category"
+ IS_NOT_JOB_OF_CATEGORY:0 "$JOB|Y$ is NOT of the $CAT|Y$ Category"
  HAS_ACCESS_MILITARY:0 "Has Military Access"
  HAS_NOT_ACCESS_MILITARY:0 "Has NOT Military Access"
  HAS_ACCESS_CIVILIAN:0 "Has Civilian Access"
@@ -577,6 +583,8 @@
  HAS_NOT_ACCESS_CONSTRUCTION:1 "$COUNTRY$ does NOT have Access Rights to the $SYSTEM$ system"
  HAS_FLEET_ORDER:0 "Has fleet order $ORDER$"
  HAS_NOT_FLEET_ORDER:0 "Does NOT have fleet order $ORDER$"
+ MEGASTRUCTURE_BUILT_ON_PLANET:0 "$SCOPE_NAME|Y$ is built on a planet"
+ MEGASTRUCTURE_NOT_BUILT_ON_PLANET:0 "$SCOPE_NAME|Y$ is NOT built on a planet"
  POP_FACTION_MILITANCY_NOT_TRIGGER:0 "Militancy is NOT $COMPARE$ $VAL0|0Y%$"
  POP_FACTION_MILITANCY_TRIGGER:0 "Militancy is $COMPARE$ $VAL0|0Y$%"
  POP_FACTION_SUPPORT_NOT_TRIGGER:0 "Support is NOT $COMPARE$ $VAL0|0Y%$"
@@ -756,6 +764,8 @@
  NUM_REPEATABLE_TECHS_NOT_TRIGGER:0 "Number of researched repeatable technologies is NOT $COMPARATOR$ $NUM|Y$"
  NUM_TECHS_OF_TIER_TRIGGER:0 "Number of researched technologies of Tier $TIER|Y$ is $COMPARATOR$ $NUM|Y$"
  NUM_TECHS_OF_TIER_NOT_TRIGGER:0 "Number of researched technologies of Tier $TIER|Y$ is NOT $COMPARATOR$ $NUM|Y$"
+ NUM_SHIPS_IN_DEBRIS_TRIGGER:0 "Number of $SIZE|Y$ ships in debris is $COMPARATOR$ $NUM|Y$"
+ NUM_SHIPS_NOT_IN_DEBRIS_TRIGGER:0 "Number of $SIZE|Y$ ships in debris is NOT $COMPARATOR$ $NUM|Y$"
  CAN_RESEARCH_TIER_TRIGGER:0 "Can research Tier $TIER|Y$ Technologies"
  CANNOT_RESEARCH_TIER_TRIGGER:0 "CANNOT research Tier $TIER|Y$ Technologies"
  SECTOR_CONTROLLED_TRIGGER:0 "Is controlled by a sector"
@@ -890,6 +900,12 @@
  USED_NAVAL_CAPACITY_PERCENT_NOT_TRIGGER:0 "ขนาดกองยานทั้งหมดไม่ $COMPARATOR$ $NUM|Y%0$ ของความจุยานรบของกองยานรบ"
  USED_NAVAL_CAPACITY_INTEGER_TRIGGER:0 "ขนาดกองยานทั้งหมด $COMPARATOR$ $NUM|Y$"
  USED_NAVAL_CAPACITY_INTEGER_NOT_TRIGGER:0 "ขนาดกองยานทั้งหมดไม่ $COMPARATOR$ $NUM|Y$"
+ STARBASE_CAPACITY_TRIGGER:0 "Starbase Capacity is $COMPARATOR$ $NUM|Y$."
+ STARBASE_CAPACITY_NOT_TRIGGER:0 "Starbase Capacity is NOT $COMPARATOR$ $NUM|Y$."
+ USED_STARBASE_CAPACITY_PERCENT_TRIGGER:0 "Used Starbase Capacity is $COMPARATOR$ $NUM|Y%0$ of Total."
+ USED_STARBASE_CAPACITY_PERCENT_NOT_TRIGGER:0 "Used Starbase Capacity is NOT $COMPARATOR$ $NUM|Y%0$ of Total."
+ USED_STARBASE_CAPACITY_INTEGER_TRIGGER:0 "Used Starbase Capacity is $COMPARATOR$ $NUM|Y$."
+ USED_STARBASE_CAPACITY_INTEGER_NOT_TRIGGER:0 "Used Starbase Capacity is NOT $COMPARATOR$ $NUM|Y$."
  planet:0 "ดาวเคราะห์"
  HAS_SPACEPORT:0 "มีสถานีท่ายานอวกาศ"
  HAS_NOT_SPACEPORT:0 "ไม่มีสถานีท่ายานอวกาศ"
@@ -931,6 +947,8 @@
  IS_NOT_MEGASTRUCTURE_TYPE_TOOLTIP:0 "Is NOT of type $TYPE|H$"
  IS_NOT_UPGRADING_TOOLTIP:0 "Is NOT Upgrading"
  IS_UPGRADING_TOOLTIP:0 "Is Upgrading"
+ CAN_BE_UPGRADED_TOOLTIP:0 "Can be upgraded"
+ CANNOT_BE_UPGRADED_TOOLTIP:0 "Cannot be upgraded"
  TRIGGER_RELATIVE_FLEET_POWER:1 "§Y$COUNTRY$§!'s Relative Fleet Power is $COMPARE$ $VALUE$ relative to §Y$WHO$§!"
  TRIGGER_RELATIVE_ECONOMY:1 "§Y$COUNTRY$§!'s Relative Economic Power is $COMPARE$ $VALUE$ relative to §Y$WHO$§!"
  TRIGGER_RELATIVE_TECHNOLOGY:1 "§Y$COUNTRY$§!'s Relative Technology Level is $COMPARE$ $VALUE$ relative to §Y$WHO$§!"
@@ -990,7 +1008,7 @@
  ADD_PHYSICS_EFFECT:3 "£physics£ §YPhysics Research§!: $NUM$\n"
  ADD_SOCIETY_EFFECT:3 "£society£ §YSociety Research§!: $NUM$\n"
  ADD_ENGINEERING_EFFECT:3 "£engineering£ §YEngineering Research§!: $NUM$\n"
- ADD_UNITY_EFFECT:3 "£unity£ §YUnity§!: $NUM$\n"
+ ADD_UNITY_EFFECT:3 "£unity£ §Yเอกภาพ§!: $NUM$\n"
  ALL_WAR_DEFENDERS:0 "All War Defenders"
  ALL_WAR_ATTACKERS:0 "All War Attackers"
  GIVE_TECH_EFFECT:0 "ได้รับเทคโนโลยี:\n$TECH|Y$\n"
@@ -1130,9 +1148,10 @@
  QUEUE_FLEET_ACTIONS_EFFECT:0 "Fleet will do special action"
  CLEAR_FLEET_ACTIONS_EFFECT:0 "Removes any fleet special actions"
  ADD_INFLUENCE:2 "£influence£ §YInfluence§!: $VALUE|Y$\n"
- MODIFY_SPECIES:0 "Modify pops in $COUNTRY|Y$ by adding the $ADD|Y$ trait and removing the $REMOVE|Y$ trait"
- MODIFY_SPECIES_ADD:0 "Modify pops in $COUNTRY|Y$ by adding the $ADD|Y$ trait"
- MODIFY_SPECIES_REMOVE:0 "Modify pops in $COUNTRY|Y$ by removing the $REMOVE|Y$ trait"
+ MODIFY_SPECIES:1 "Modify pops in $COUNTRY|Y$ by adding the trait(s) $ADD$, and removing the trait(s) $REMOVE$"
+ MODIFY_SPECIES_ADD:1 "Modify pops in $COUNTRY|Y$ by adding the trait(s) $ADD$"
+ MODIFY_SPECIES_REMOVE:1 "Modify pops in $COUNTRY|Y$ by removing the trait(s) $REMOVE$"
+ MODIFY_SPECIES_BLANK:0 "Modify pops in $COUNTRY|Y$"
  ESTABLISH_CONTACT_EFFECT:0 "Establishes contact with $COUNTRY|Y$"
  ADD_EVENT_CHAIN_COUNTER_EFFECT:0 "+$AMOUNT|Y$ $COUNTER$\n"
  ADD_ANOMALY_EFFECT:0 "Add an Anomaly\n"
@@ -1331,8 +1350,8 @@
  count_member_all_trigger:0 "$IS_ALL_NOT$ Federation Members fulfill the following conditions"
  count_relation_trigger:1 "จำนวนความสัมพันธ์$CONDITIONS$ $IS_NOT$ $COMPARATOR$ $NUM|Y$"
  count_relation_all_trigger:0 "$IS_ALL_NOT$ Relations fulfill the following conditions"
- any_bordering_country_trigger:0 "Any Bordering Country"
- effect_random_bordering_country:0 "Random Bordering Country"
+ any_country_neighbor_to_system_trigger:0 "Any Bordering Country"
+ effect_random_country_neighbor_to_system:0 "Random Bordering Country"
  any_relation_trigger:0 "Any Country Relation"
  effect_every_relation:0 "Every Country Relation"
  effect_random_relation:0 "Random Country Relation"
@@ -1406,6 +1425,11 @@
  effect_every_owned_starbase:0 "Every owned Starbase"
  count_owned_starbase_trigger:1 "Number of owned Starbases$CONDITIONS$ $IS_NOT$ $COMPARATOR$ $NUM|Y$"
  count_owned_starbase_all_trigger:0 "$IS_ALL_NOT$ owned Starbases fulfill the following conditions"
+ any_owned_nonprimary_starbase_trigger:0 "Any owned Orbital Ring"
+ effect_random_owned_nonprimary_starbase:0 "Random owned Orbital Ring"
+ effect_every_owned_nonprimary_starbase:0 "Every owned Orbital Ring"
+ count_owned_nonprimary_starbase_trigger:0 "Number of owned Orbital Ring$CONDITIONS$ $IS_NOT$ $COMPARATOR$ $NUM|Y$"
+ count_owned_nonprimary_starbase_all_trigger:0 "$IS_ALL_NOT$ owned Orbital Ring fulfill the following conditions"
  TRIGGER_IS_VALID_PLANET_KILLER_TARGET:0 "Can target $TARGET|Y$ with its Planet-Killer Weapon"
  TRIGGER_NOT_IS_VALID_PLANET_KILLER_TARGET:0 "Can NOT target $TARGET|Y$ with its Planet-Killer Weapon"
  EFFECT_SET_HOME_BASE:0 "กำหนดเป็นฐานประจำการของ $FLEET|Y$ เป็น $BASE|Y$"
@@ -1570,6 +1594,8 @@
  NUM_FAVORS_AT_LEAST:1 "Number of §HFavor(s)§! ($VAL0|Y$) owed by $COUNTRY$ $COMPARE$ $VAL1|0Y$"
  HAS_AVAILABLE_JOB:0 "$PLANET|Y$ มีตำแหน่งงานในอาชีพ $JOB|Y$ ที่ยังว่างอยู่"
  HAS_AVAILABLE_JOB_NOT:0 "$PLANET|Y$ ไม่มีตำแหน่งงานในอาชีพ $JOB|Y$ ที่ยังว่างอยู่เลย"
+ HAS_FORBIDDEN_JOB:0 "$PLANET|Y$ has any deprioritized $JOB|Y$ job "
+ HAS_FORBIDDEN_JOB_NOT:0 "$PLANET|Y$ DOESN'T HAVE any deprioritized $JOB|Y$ job free"
  any_federation_trigger:0 "Any Federation"
  effect_random_federation:0 "Random Federation"
  effect_every_federation:0 "Every Federation"
@@ -1724,9 +1750,9 @@
  CAN_NOT_SET_POLICY_TRIGGER:0 "Cannot set Policy on $POLICY_GROUP|Y$ to $OPTION|Y$"
  CAN_WORK_SPECIFIC_WORK_TYPE_TRIGGER:1 "Can take any $JOB$ job which becomes available."
  CAN_NOT_WORK_SPECIFIC_JOB_TYPE_TRIGGER:1 "Can NOT take any $JOB$ job which becomes available."
- HAS_PLANETARY_ASCENSION_TIER:0 "Planetary Ascension Tier is $COMPARATOR$ $TIER|Y$"
- HAS_NOT_PLANETARY_ASCENSION_TIER:0 "Planetary Ascension Tier is NOT $COMPARATOR$ $TIER|Y$"
- SET_PLANETARY_ASCENSION_TIER:0 "Planetary Ascension Tier is set to $TIER|Y$"
+ HAS_PLANETARY_ASCENSION_TIER:0 "ระดับของดาวเคราะห์ $COMPARATOR$ $TIER|Y$"
+ HAS_NOT_PLANETARY_ASCENSION_TIER:0 "ระดับของดาวเคราะห์ ไม่$COMPARATOR$ $TIER|Y$"
+ SET_PLANETARY_ASCENSION_TIER:0 "ระดับของดาวเคราะห์เปลี่ยนเป็น $TIER|Y$"
  HAS_DEFENSIVE_ARMY_STRENGTH:0 "Garrison Strength is $COMPARATOR$ $VALUE|Y$"
  HAS_NOT_DEFENSIVE_ARMY_STRENGTH:0 "Garrison Strength is NOT $COMPARATOR$ $VALUE|Y$"
  HAS_PATH_TRIGGER:0 "$COUNTRY|Y$ follows the $PATH|Y$ Crisis Path"
@@ -1750,6 +1776,7 @@
  NOT_CLIMATE_TRIGGER:0 "Does NOT have a $CLIMATE|Y$ Climate"
  IS_SCOPE_TYPE:0 "Is a $SCOPETYPE$"
  IS_NOT_SCOPE_TYPE:0 "Is NOT a $SCOPETYPE$"
+ MULTIPLY_CRISIS_STRENGTH:0 "The strength of Endgame Crises is multiplied by $MULT|Y$"
  SET_MALE_RULER_TITLE_EFFECT:0 "Title of male rulers is set to $NAME$"
  SET_FEMALE_RULER_TITLE_EFFECT:0 "Title of female rulers is set to $NAME$"
  SET_MALE_HEIR_TITLE_EFFECT:0 "Title of male heirs is set to $NAME$"
