--- a/mod/thmod/localisation/english/tutorial_l_english.yml
+++ b/mod/thmod/localisation/english/tutorial_l_english.yml
@@ -49,13 +49,13 @@
  TUTORIAL_GOVERNMENTVIEW_BUDGET_TITLE:0 "Budget"
  TUTORIAL_GOVERNMENTVIEW_BUDGET_DESC:0 "The §SBudget§! tab tallies our empire's monthly §SIncome§! and §SExpenses§! in Energy Credits. Here we can also track a variety of effects that influence our economy."
  TUTORIAL_GOVERNMENTVIEW_DECISIONS_TITLE:2 "ประกาศคำสั่ง"
- TUTORIAL_GOVERNMENTVIEW_DECISIONS_DESC:4 "Here empire-wide §SEdicts§!, practices that can be enforced by spending some of our resources, can be enacted.\n\nEdicts have a monthly upkeep cost, which can be covered by our §H$EDICT_FUND$§! or by spending £unity£§YUnity§!."
+ TUTORIAL_GOVERNMENTVIEW_DECISIONS_DESC:4 "นี่คือ §Sประกาศคำสั่งหรือกฤษฎีกา§! ที่ประกาศใช้ทั้งจักรวรรดิ มีแนวทางปฏิบัติที่สามารถบังคับใช้ โดยการใช้ทรัพยากรบางส่วนของเรา\n\nประกาศคำสั่งมีค่าใช้จ่ายรายเดือนซึ่งคุ้มครองโดย §H$EDICT_FUND$§! หรือใช้ £unity£§Yเอกภาพ§! แทนก็ได้"
  TUTORIAL_GOVERNMENTVIEW_DEMOGRAPHICS_TITLE:0 "ข้อมูลประชากร"
  TUTORIAL_GOVERNMENTVIEW_DEMOGRAPHICS_DESC:0 "แท็บ §Sสถิติประชากร§! จะติดตามการปรับเปลี่ยนและการแพร่กระจายของประชากรในจักรวรรดิของเรา\n\nนอกจากนี้ยังแสดงให้เห็นถึง §Sคุณลักษณะ§! ในกลุ่ม §Sประชากร§! ของเรารวมไปถึงการปรับเปลี่ยนประสิทธิภาพการทำงานและความสุข"
  TUTORIAL_EMPIREVIEW_LEADERS_TITLE:0 "ผู้นำ"
  TUTORIAL_EMPIREVIEW_LEADERS_DESC:0 "แท็บ §Sผู้นำ§! ช่วยให้เราจ้าง เลิกจ้างและสั่งให้ผู้นำอยู่เฉยๆ (§Sผู้ว่าการ§!, §Sนักวิทยาศาสตร์§!, §Sนายพลกองยาน§! และ §Sนายพลภาคพื้นดิน§!)"
  TUTORIAL_EMPIREVIEW_FACTIONS_TITLE:0 "กลุ่มการเมือง"
- TUTORIAL_EMPIREVIEW_FACTIONS_DESC:4 "The §SFactions§! screen gives an overview of the populace's political leanings. Be aware that shifts in the sociopolitical climate may give rise to §SFactions§!. Details on §SFaction§! sizes, attractiveness to our Pops, and how content they are may also be found here.\n\n§SFactions§! have §SIssues§! that are important to their overall §SApproval§!, and our policies and actions as a nation may displease or please these groupings, providing an increasing boost to £unity£§YUnity§! generation. The strength of §SFactions§! and the nature of their §SIssues§! can change along with our circumstances, but keep in mind that the §SHappiness§! of a §SPop§! can be affected by the §SApproval§! of the §SFaction§! it belongs to.\n\nWe can also §SManage Factions§! to manipulate the relationship between a §SFaction§! and the state, even going so far as embracing the ethos of a strong §SFaction§!."
+ TUTORIAL_EMPIREVIEW_FACTIONS_DESC:4 "หน้าต่าง §Sกลุ่มการเมือง§! จะแสดงภาพรวมความเอนเอียงทางการเมืองของประชากร พึงระวังว่าการเปลี่ยนแปลงบรรยากาศทางการเมืองอาจก่อให้เกิด §Sกลุ่มการเมือง§! รายละเอียดเกี่ยวกับขนาดของ §Sกลุ่มการเมือง§!, ความน่าดึงดูดใจกับประชากรของเราและเนื้อหาต่างๆที่สามารถพบได้ที่นี่\n\n§Sกลุ่มการเมือง§! แต่ละกลุ่มจะมี §Sประเด็นปัญหา§! ที่มีความสำคัญต่อ §Sความพึงพอใจ§! นโยบายและการดำเนินการของเราในฐานะประเทศหนึ่ง อาจทำให้กลุ่มเหล่านี้พอใจหรือไม่พอใจ ส่งผลต่อการเพิ่มของ £unity£§Yเอกภาพ§! ได้ ความเข้มแข็งของ §Sกลุ่มการเมือง§! และลักษณะของ §Sประเด็นความต้องการ§! สามารถเปลี่ยนแปลงได้ตามสถานการณ์ของเรา แต่พึงระลึกไว้เสมอว่า §Sความพึงพอใจ§! ของ §Sกลุ่มการเมือง§! มีผลต่อ §Sความสุข§! ของ §Sประชากร§!\n\nนอกจากนี้เรายังสามารถ §Sจัดการกลุ่มการเมือง§! เพื่อจัดการความสัมพันธ์ระหว่าง §Sกลุ่ม§! และรัฐ   แม้กระทั่งการสนับสนุนแนวคิดของฝ่าย §Sกลุ่มการเมือง§! ที่แข็งแกร่ง"
  TUTORIAL_CREATESECTOR_TITLE:0 "การจัดการเซกเตอร์"
  TUTORIAL_CREATESECTOR_DESC:2 "To establish a §SSector§!, first select a planet in §SFrontier space§! and press the Create Sector button. This will make the planet the §SCapital§! of a new Sector and all frontier space systems within six hyperjumps will be added to it. Sectors may automate the construction of planetary buildings on planets within them if this option is enabled and they are given resources, greatly reducing the need for micromanagement."
  TUTORIAL_CONTACTSVIEW_SPECIES_TITLE:0 "เผ่าพันธุ์"
@@ -108,14 +108,14 @@
  TUTORIAL_CLAIMS_VIEW_DESC:0 "นี่คืออินเทอร์เฟซ §Sการอ้างสิทธิ์§! ที่เราสามารถใช้ §Sอิทธิพล§! เพื่ออ้างสิทธิ์ในระบบดาวที่เป็นของผู้อื่น การอ้างสิทธิ์จะทำให้เรามีข้ออ้าง §Sเหตุแห่งสงคราม§! กับเจ้าของระบบดาว ทำให้เราสามารถประกาศสงครามเพื่อพิชิตได้\n\nในสงครามที่ระบบดาวถูกอ้างสิทธิ์โดยหลายๆจักรวรรดิ จักรวรรดิที่มีค่าการอ้างสิทธิ์สูงสุดจะได้เป็นเจ้าของเมื่อจบสงคราม"
  TUTORIAL_ANOMALIES_TITLE:0 "ความผิดปกติ"
  TUTORIAL_ANOMALIES_DESC:0 "หน้าต่าง §Sความผิดปกติ§! แสดงรายการทั้งหมดที่ยังไม่ได้ศึกษา §Sความผิดปกติ§! ที่เราได้พบ"
- TUTORIAL_GOVERNMENTVIEW_MARKET_TITLE:0 "The Market"
- TUTORIAL_GOVERNMENTVIEW_MARKET_DESC:0 "Via the §SMarket§! screen we can buy and sell resources. At first this is merely an internal market, but if enough Empires establish contact I expect they might form some sort of §SGalactic Market§!.\n\nResources can be bought and sold using the appropriate buttons here, but be aware that buying or selling a resource will raise or lower the price of that resource respectively. §SMonthly§! automatic trade deals can also be set up in the section to the right."
- TUTORIAL_GOVERNMENTVIEW_SLAVE_MARKET_TITLE:0 "The Slave Market"
+ TUTORIAL_GOVERNMENTVIEW_MARKET_TITLE:0 "ตลาด"
+ TUTORIAL_GOVERNMENTVIEW_MARKET_DESC:0 "เราสามารถซื้อและขายทรัพยากรได้ผ่านหน้าต่าง §Sตลาด§! ในตอนแรกที่นี่จะเป็นเพียงตลาดภายในเพียงเท่านั้น แต่ถ้าจักรวรรดิต่างๆทำการติดต่อกันได้มากพอ คาดว่าพวกเขาอาจสร้าง §Sตลาดกาแลกติก§! ขึ้นมาได้\n\nสามารถซื้อและขายทรัพยากรโดยใช้ปุ่มที่นี่ แต่โปรดทราบว่าการซื้อหรือขายทรัพยากรจะเป็นการเพิ่มหรือลดราคาของทรัพยากรนั้นๆ คุณสามารถตั้งค่าข้อตกลงการค้าอัตโนมัติแบบราย§Sเดือน§!ได้ในส่วนทางด้านขวา"
+ TUTORIAL_GOVERNMENTVIEW_SLAVE_MARKET_TITLE:0 "ตลาดค้าทาส"
  TUTORIAL_GOVERNMENTVIEW_SLAVE_MARKET_DESC:1 "It is often said that life is cheap, but only by those who don't have to pay interplanetary shipping rates and import taxes.\n\nThe §SSlave Market§! allows us to buy and sell §SPops§!, they will be automatically delivered to the selected planet."
- TUTORIAL_TRADE_VIEW_TITLE:0 "Trade Routes"
- TUTORIAL_TRADE_VIEW_DESC:1 "As our empire grows, §STrade§! between our planets will become an increasingly large part of our economy. §SStarbases§! collect §STrade Value§! within their system to be routed to the §SCapital§! for conversion to §SEnergy Credits§!.\n\nBuilding §STrade Hubs§! means a §SStarbase§! can collect §STrade Value§! from adjacent systems as well. Rich Trade Routes may attract §SPirates§!, though they can be countered by Fleets on §SPatrol§!, and by §SDefense Modules§! on §SStarbases§!. §SHangar Modules§! are particularly effective for this."
- TUTORIAL_GOVERNMENTVIEW_POLICIES_TITLE:0 "Policies"
- TUTORIAL_GOVERNMENTVIEW_POLICIES_DESC:0 "The §SPolicies§! tab covers government §SPolicies§!, which have wide-ranging effects on how our empire is run.\n\nThere are often a few possible stances to take for any given §SPolicy§!, though we may be limited by technology as well as our §SEthos§!."
+ TUTORIAL_TRADE_VIEW_TITLE:0 "เส้นทางการค้า"
+ TUTORIAL_TRADE_VIEW_DESC:1 "เมื่อจักรวรรดิของเราเติบโตขึ้น §Sการค้า§! ระหว่างดาวเคราะห์ของเราจะกลายเป็นส่วนสำคัญของเศรษฐกิจของเรามากขึ้น §Sฐานอวกาศ§! เก็บ §Sมูลค่าการค้า§! ภายในระบบดาวของพวกเขาจะถูกส่งไปยัง §Sศูนย์กลางจักรวรรดิ§! เพื่อเปลี่ยนเป็น §Sเครดิตพลังงาน§!\n\nการสร้าง §Sฮับการค้า§! จะทำให้ §Sฐานอวกาศ§! สามารถเก็บ §Sมูลค่าการค้า§! จากระบบดาวที่อยู่ข้างเคียงได้ เส้นทางการค้าที่มีมูลค่าการค้ามากอาจดึงดูด §Sโจรสลัด§! แต่พวกเราสามารถตอบโต้พวกเขาได้โดยใช้คำสั่ง §Sลาดตระเวน§! ที่กองยานรบของเราและสร้าง §Sโมดูลป้องกัน§! ไว้ที่ §Sฐานอวกาศ§! §Sโมดูล Hangar (ในยานรบ)§! มีประสิทธิภาพมากสำหรับสิ่งนี้"
+ TUTORIAL_GOVERNMENTVIEW_POLICIES_TITLE:0 "นโยบาย"
+ TUTORIAL_GOVERNMENTVIEW_POLICIES_DESC:0 "แท็บ §Sนโยบาย§! ครอบคลุม §Sนโยบาย§! ของรัฐบาลซึ่งมีผลกระทบอย่างกว้างขวางต่อการดำเนินกิจกรรมทั้งภายในและภายนอกจักรวรรดิของเรา\n\nมักมีจุดยืนที่เป็นไปได้ของ §Sนโยบาย§! สองถึงสามอย่าง และถูกจำกัดด้วยเทคโนโลยีและ §Sจริยธรรม§! ของเรา"
  TRADE_VIEW_DESC:0 "As our empire grows, §STrade§! between our planets will become an increasingly large part of our economy. §SStarbases§! with §STrade Hubs§! collect §STrade Value§! within their system to be routed to the §SCapital§! for conversion to §SEnergy Credits§!.\n\nMore §STrade Hubs§! means a §SStarbase§! can collect §STrade Value§! from adjacent systems as well. Rich Trade Routes may attract §SPirates§!, though they can be countered by Fleets on §SPatrol§!, and by §SDefense Modules§! on §SStarbases§!. §SHangar Modules§! are particularly effective for this."
  PLANETVIEW_CORPORATE_DESC:0 "The corporate tab allows §SMegacorporation§! to build Branch offices on the planets of other Empires, provided they have signed the necessary paperwork. Once built, they can view and upgrade their facilities here as well. As we know, large Corporations wish only the best for their customers, events of the 23rd cycle notwithstanding."
  TUTORIAL_FEDERATION_VIEW_TITLE:0 "Federation Overview"
@@ -166,9 +166,9 @@
  TUTORIAL_AGREEMENTS_NO_OVERLORD_DESC:0 "$TUTORIAL_AGREEMENTS_DESC$"
  TUTORIAL_AGREEMENTS_HAS_OVERLORD_TITLE:0 "$TUTORIAL_AGREEMENTS_TITLE$"
  TUTORIAL_AGREEMENTS_HAS_OVERLORD_DESC:0 "$TUTORIAL_AGREEMENTS_DESC$\n\nSubject empires may choose to become §SSpecialist Empires§!. Specialization brings significant benefits to matters like resource production or military capability, however the empire will find itself at a disadvantage in other areas.\n\nSpecialist Empires also provide a boost to §SLoyalty§!. So long as they maintain a stable amount of Loyalty, Specialist Empires will stand to earn XP and thus progress towards higher tiers for their chosen specialty."
- TUTORIAL_HOLDINGS_TITLE:0 "Holdings"
- TUTORIAL_HOLDINGS_DESC_SHARED:0 "The §SHoldings§! screen provides an overview of all the Holdings on this planet. This allows empires to place distinct types of buildings on each other's capitals and colonies. These may affect matters such as Diplomacy, Intel, and resource production."
- TUTORIAL_HOLDINGS_DESC_MEGA_CORP:0 "Megacorporations may open §SBranch Offices§! on other empires' worlds, provided some form of Diplomatic arrangement is in place. As we know, large corporations wish only the best for their customers - events of the 23rd cycle notwithstanding!"
+ TUTORIAL_HOLDINGS_TITLE:0 "การครอบครอง"
+ TUTORIAL_HOLDINGS_DESC_SHARED:0 "หน้าต่าง §Sการถือครอง§! แสดงให้เห็นภาพรวมของการถือครองทั้งหมดบนดาวดวงนี้ สิ่งนี้ทำให้จักรวรรดิอื่นๆสามารถตั้งสิ่งปลูกสร้างประเภทต่างๆบนดาวที่เป็นศูนย์กลางจักรวรรดิและอาณานิคม สิ่งเหล่านี้อาจส่งผลกระทบต่อเรื่องต่างๆ เช่น การทูต ข้อมูลข่าวกรองและการผลิตทรัพยากร"
+ TUTORIAL_HOLDINGS_DESC_MEGA_CORP:0 "บริษัทขนาดใหญ่จะทำการเปิด §Sสำนักงานสาขา§! บนดาวของจักรวรรดิอื่น ที่มีข้อตกลงทางการทูตกับจักรวรรดินั้นๆ อย่างที่เราทราบกันดีว่าองค์กรขนาดใหญ่ปรารถนาแต่สิ่งที่ดีที่สุดให้กับลูกค้าของพวกเขา"
  TUTORIAL_HOLDINGS_DESC_OVERLORD:0 "§SOverlords§! may use Holdings to further extend their reach into a §SSubject§!'s domain. Many such Holdings affect Loyalty, and some are uniquely tailored to Specialist Empires. Any upgrades may also be facilitated via this screen."
  TUTORIAL_HOLDINGS_NO_MEGA_CORP_NO_OVERLORD_TITLE:0 "$TUTORIAL_HOLDINGS_TITLE$"
  TUTORIAL_HOLDINGS_NO_MEGA_CORP_NO_OVERLORD_DESC:0 "$TUTORIAL_HOLDINGS_DESC_SHARED$"
@@ -376,6 +376,8 @@
  tutorial.101.desc:0 "เปิด §HTips§! , ปิด §Hสอนทำภารกิจ§!"
  tutorial.102.name:0 "สอนเล่นเต็มรูปแบบ"
  tutorial.102.desc:0 "เปิดใช้ §Hสอนทำภารกิจ§! และ §HTips§!"
+ tutorial.1337.name:0 "ศิลปวัตถุชั้นรอง"
+ tutorial.1337.desc:2 "เราได้ค้นพบ §Sศิลปวัตถุชั้นรอง§! บางอย่าง สิ่งเหล่านี้เป็นทรัพยากรที่ลึกลับ - มีคำศัพท์เฉพาะสำหรับของแปลกๆ ที่เราไม่เข้าใจและไม่อาจอธิบายได้ ไม่ว่าสิ่งนี้จะทำอะไร ได้ก็ตามแต่สิ่งนี้สามารถใช้เพื่อสร้างการตัดสินใจที่หลากหลายผ่านทางหน้าต่าง §S$RELICS_AND_ARTIFACTS$§! แท็บอินเตอร์เฟซ §S$TRADITION_VIEW_TITLE$§!"
  tutorial.2000.name:0 "การดำเนินการติดต่อครั้งแรก"
  tutorial.2000.desc:1 "ภารกิจ §Sการติดต่อครั้งแรก§! บางภารกิจจะเสนอทางเลือกว่าเราต้องการที่จะดำเนินการอย่างไร ทางเลือกเหล่านี้อาจส่งผลต่อความสัมพันธ์ทางการฑูตของเรากับจักรวรรดิอื่นเป็นเวลานาน"
  tutorial.2006.name:0 "First Contact Established"
