--- a/mod/thmod/localisation/english/utopia_l_english.yml
+++ b/mod/thmod/localisation/english/utopia_l_english.yml
@@ -111,6 +111,9 @@
  requires_no_existing_spyorb:0 "$TRIGGER_FAIL$Cannot build more than one Sentry Array."
  requires_no_existing_think_tank:0 "$TRIGGER_FAIL$Cannot build more than one Science Nexus."
  requires_no_existing_dyson_sphere:0 "$TRIGGER_FAIL$Cannot build more than one Dyson Sphere."
+ requires_no_existing_spyorb_two:0 "$TRIGGER_FAIL$Cannot build more than two Sentry Arrays."
+ requires_no_existing_think_tank_two:0 "$TRIGGER_FAIL$Cannot build more than two Science Nexuses."
+ requires_no_existing_dyson_sphere_two:0 "$TRIGGER_FAIL$Cannot build more than two Dyson Spheres."
  requires_no_black_hole_neutron_star_pulsar:0 "$TRIGGER_FAIL$Cannot build Dyson Spheres around Black Holes, Neutron Stars or Pulsars."
  requires_no_anomaly:1 "$TRIGGER_FAIL$Cannot build on planets that have unresearched anomalies discovered by us or any other Empire."
  requires_not_ring_world:0 "$TRIGGER_FAIL$Cannot build on Ring Worlds."
@@ -134,7 +137,7 @@
  SYNTHETIC_EVOLUTION_PROJECT:0 "วิวัฒนาการจักรกลสังเคราะห์"
  SYNTHETIC_EVOLUTION_PROJECT_DESC:0 "It is time to leave our flawed organic vessels behind and embrace immortality. We must prepare advanced synthetic avatars for our entire population, and then begin the process of consciousness transfers."
  TRAIT_IMPROVES_LEADERS:0 "§GLeaders from this species have additional traits and bonuses§!"
- trait_cybernetic:0 "Cybernetic"
+ trait_cybernetic:0 "ไซเบอร์เนติก"
  trait_cybernetic_desc:0 "§LThis species has embraced cybernetics on such a scale that its members may be considered cyborgs. They routinely replace their organic body parts with more advanced mechanical versions.§!\n"
  trait_latent_psionic:0 "พลังจิตแฝง"
  trait_latent_psionic_desc:0 "§LThis species has latent psionic abilities, which are dormant in most of its members. Although quite rare, these powers will manifest in some leaders.§!\n"
