--- a/mod/thmod/localisation/english/distant_stars_l_english.yml
+++ b/mod/thmod/localisation/english/distant_stars_l_english.yml
@@ -1101,10 +1101,9 @@
  distar.2038.desc:0 "The Lizards have broken free. Somehow they must have solved the time loop conundrum on their own and then managed to shatter the already cracking shield."
  distar.2038.a:0 "Remarkable."
  leviathans.500.g:0 "We have uncovered the Infinity Machine's secret."
- leviathans.4000.name:0 "Incoming Transmission"
- leviathans.4000.desc:0 "YOU!? Uncover the Infinity Machine's secret?! That is about as likely as the [From.GetSpeciesNamePlural] are to survive into the next century. Not very likely, if that was unclear.\n\nWait - don't tell me YOU are the [From.GetSpeciesNamePlural]? My sincerest apologies... I must have confused you with the...[unfriends.GetName]?\n\nTell you what, give us one thing we do not yet know about the Infinity Sphere and we will reward you handsomely."
+ leviathans.4000.desc:1 "YOU!? Uncover the Infinity Machine's secret?! That is about as likely as the [From.GetSpeciesNamePlural] are to survive into the next century. Not very likely, if that was unclear.\n\nWait - don't tell me YOU are the [From.GetSpeciesNamePlural]? My sincerest apologies... I must have confused you with the... [unfriends.GetName]?\n\nTell you what: give us one thing we do not yet know about the Infinity Sphere and we will reward you handsomely."
  leviathans.4000.a:0 "Prepare to have your minds blown."
- leviathans.4000.a.reply:0 "You cannot mean to say...but if the AI entered the Gargantua black hole it can only mean that...but it cannot...for if it were it would be...beyond our comprehension...\n\nThough the magnitude of your finds clearly eludes you [Root.GetSpeciesNamePlural], you were right to come to us, and for this you have our gratitude."
+ leviathans.4000.a.reply:1 "You cannot mean to say... But if the AI entered the Gargantua black hole it can only mean that... But it cannot, for if it were it would be beyond our comprehension...\n\nThough the magnitude of your finds clearly eludes you [Root.GetSpeciesNamePlural], you were right to come to us, and for this you have our gratitude."
  leviathans.4000.b:0 "Forget it."
  leviathans.4000.b.reply:0 "Thought so."
  distar.5010.name:0 "A Planet with a Pulse"
@@ -1628,7 +1627,7 @@
  l_cluster_chain_desc:0 "We have learned of a mysterious star cluster somewhere just beyond the periphery of our galaxy. It can only be accessed through §HL-Gates§!, artificial subspace portals found in certain systems.\n\nThese Gateways have been deliberately disabled by someone, and for now we lack the necessary insight into the subspace mechanics that govern their use to lift the lockdown."
  clues:1 "ข้อมูลเชิงลึก L-Gate"
  clue:1 "ข้อมูลเชิงลึก L-Gate"
- add_lcluster_clue:1 "$clue$ Gained: §G+1§!"
+ add_lcluster_clue:1 "$clue$ ได้รับ: §G+1§!"
  distar.11000.desc:0 "Hello."
  sr_distar_nanodust:0 "Gray Dust"
  sr_distar_nanodust_desc:0 "A slurry of elements reduced to particulate matter. Once distributed across a world, Gray Dust can be activated by nanomachines to rapidly alter planetary conditions."
@@ -1653,11 +1652,6 @@
  distar.10956.name:0 "The L-Cluster Beckons"
  distar.10956.desc:0 "Our spies report that the §H[lgate_warning_country.GetName]§! is close to possessing enough information about the L-Gates to unlock the one they control. This would give them access to the L-Cluster and its secrets!\n\nIf we are to get there first, we must double our efforts and find more insights into the L-Gates!"
  distar.10956.a:0 "We shall see who gets there first."
- distar.11500.a:0 "What do you know about the $lgates$?"
- distar.11500.a.tooltip.noclue:1 "It takes the [From.GetName] approximately a decade to identify each new §Y$clue$§!."
- distar.11501.name:0 "$clues$"
- distar.11501.desc:0 "The $lgates$? Yes, like the other Gateways they predate even the oldest $gov_stagnant_ascendancy$, but we are sure you have figured that out already.\n\nWhy are they different? Where do they lead? We have opted not to delve too deeply into those particular mysteries - "thrice bitten, zero-point-seventeen shy" you know how it is - but we are willing to share some recent revelations that just might be related.\n\nFor a price."
- distar.11501.a:0 "Please do."
  graygoo.10.name:0 "The Gray Tempest"
  graygoo.10.desc:2 "Our technicians managed to lift the lockdown from the L-Gate near [candidate_gateway_system.GetName], but as soon as a permanent link was established to the L-Cluster, a massive incoming subspace surge was detected! We were able to restrict this potential invasion force from using our gate, while still retaining access for ourselves.\n\nUnfortunately, the incoming surge was diverted to the other L-Gates in the galaxy. Strange vessels consisting of nanites are pouring through these now fully active gates, attacking everything in sight!\n\nAll attempts to communicate with these machines have failed. In the wake of their passage through the L-Gates, we have detected a repeating subspace transmission emanating from the L-Cluster."
  graygoo.10.a:0 "Put the message on screen."
@@ -2012,6 +2006,7 @@
  pc_egg_cracked:0 "Cracked World"
  pc_egg_cracked_desc:0 "The cracked shards of an enormous planet-sized egg."
  SPORE_LAUNCHER:0 "$STRANGE_COMPONENTS_DESC$"
+ SPORE_ARTILLERY:0 "$STRANGE_COMPONENTS_DESC$"
  distar.9000.lcluster_clue_desc_1:1 "We have discovered that the alien compound found on the enigmatic cache is made up of the powdered fragments of microscopic robotic entities - nanites. Some of the scratches in the hull even have tiny mechanical claws stuck in them, and in one we discovered an active but damaged nanite leeching its energy from the cache. From what remained of the nanite's hard drive we have extracted data that could be pivotal for our understanding of the L-cluster Gateway network."
  distar.9000.lcluster_clue_desc_2:0 "Among the items recovered from the ruins on [big_rip_planet.GetName] was a malfunctioning hologram from the society that interfered with the plantoid primitives. Though most of the data was either corrupted or unintelligible due to an incessant whooshing sound and the panicked state of the sender, we managed to restore several fragments containing valuable information on the Gateway network.\n\nMost of the hologram, however, was dedicated to sickening premonitions of the Gray Tempest and the gruesome death that would follow in its wake."
  distar.9000.lcluster_clue_desc_3:0 "As the crew returning from the Xvan labs were decontaminated we identified an alien substance on their protective wear. Upon closer examination it has proven to be fragments of microscopic robots turned into a fine gray dust. Among the samples we found an intact nanite carrying instructions for attaching bolts to a structure we believe could be a Gateway.\n\nThis molecular construct maybe have had an integral part in assembling the entire L-Gate network."
