--- a/mod/thmod/localisation/english/events_l_english.yml
+++ b/mod/thmod/localisation/english/events_l_english.yml
@@ -15,6 +15,7 @@
  PECULIAR:0 "Peculiar."
  UNFORTUNATE:0 "Unfortunate."
  WORRYING:0 "Worrying."
+ DISTURBING:0 "Disturbing."
  DISCONCERTING:0 "Disconcerting."
  TRANSMISSION:0 "การสื่อสารที่เข้ามา"
  TRANSMISSION_NAME:0 "§H[From.GetName]§!"
