--- a/mod/thmod/localisation/english/modifiers_3_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_3_l_english.yml
@@ -37,6 +37,8 @@
  mycelial_network_modifier_improved:0 "Improved Mycelial Network"
  fumongus_authoritarian:0 "Authoritarian Attraction"
  rage_sage_soldiers:0 "Sage Rage"
+ harmonious_tune:0 "Harmonious Tune"
+ harmonious_tune_desc:0 "Everything should serve the collective. This tune is used to stabilize the connection between our drones and the wider hive."
  edict_masters_writings_politics:0 "คำสอนของผู้เชี่ยวชาญ: สิ่งที่ดีกว่า"
  edict_masters_writings_politics_desc:0 "Translations of an alien philosopher's teachings. We could make great strides in infrastructure by following her advice on how to unify the people via self-sacrifice.\n\n"A strong nation is built upon the sacrifice of comfort, as long as everyone is asked to carry the burden together." - Telisa, the Teller of Tales\n\n"
  edict_masters_writings_philosophy:0 "คำสอนของผู้เชี่ยวชาญ: ความคิดเชิงปรัชญา"
@@ -117,6 +119,10 @@
  energy_poor_desc:0 "Don't want to alarm you, but snakes are coiled around the generators and draining power."
  mining_equipment_offline:0 "$d_abandoned_mining_tunnels$"
  mining_equipment_offline_desc:0 "$snake_infestation_desc$"
+ locust_planet_cracked:0 "Shattered Planet"
+ locust_planet_cracked_desc:0 "This planet has been stripped of almost all life and shattered by a massive burst of energy. The only signs of previous intelligent life on this world are a crumbling orbital space station and sporadic traces under the broken surface."
+ nascent_locust:0 "Nascent Locust"
+ nascent_locust_desc:0 "This planet boasts a large population of easy-to-dispatch but rapidly reproducing creatures. Anyone trying to survive on the surface will have to adapt their infrastructure to occasional attacks by large insects."
  ship_survey_boost:0 "Enhanced Survey Scanner"
  alien_racing_ship:0 "Science Ship"
  alien_racing_ship_plural:0 "Science Ships"
