--- a/mod/thmod/localisation/english/overlord_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_l_english.yml
@@ -334,6 +334,7 @@
  MOD_SHIP_FRIENDLY_TERRITORY_TRACKING_MULT:0 "$MOD_SHIP_TRACKING_MULT$ in Friendly Systems"
  MOD_SHIP_FRIENDLY_TERRITORY_FIRE_RATE_MULT:0 "$MOD_SHIP_FIRE_RATE_MULT$ in Friendly Systems"
  subject_loyalty_effects:0 "Subject"
+ naval_cap_unmodified: "$subject_loyalty_effects$"
  resolution_galcom_ethic_modifier:0 "$resolution_category_bureaucraticsurveillance$"
  resolution_galcom_ethic_modifier_desc:0 "Aided by the Galactic Community, this empire's overlord has greater insight and authority over the inner workings of their subjects."
  resolution_galcom_spiritualist_ethic_modifier_tier_1:0 "$resolution_galcom_ethic_modifier$"
