--- a/mod/thmod/localisation/english/plantoids_l_english.yml
+++ b/mod/thmod/localisation/english/plantoids_l_english.yml
@@ -54,9 +54,15 @@
  TRAIT_PLANTOID_RADIOTROPHIC_EFFECT:0 "$TRAIT_PLANTOID_PHOTOTROPHIC_EFFECT$\nประชากรที่อาศัยอยู่บน §Yโลกแห่งความตาย§! จะไม่มีการบำรุงรักษาที่เป็น £energy£ §Yพลังงาน§!\nการเพิ่มจำนวนของประชากรบน §Yโลกแห่งความตาย§! §G+10%§!\nการอยู่อาศัยได้บนโลกแห่งความตาย: §G+10%§!"
  trait_harvested_radiotrophic:0 "$trait_plantoid_radiotrophic$"
  trait_harvested_radiotrophic_desc:0 "$trait_plantoid_radiotrophic_desc$"
+ trait_lithoid_radiotrophic:0 "$trait_plantoid_radiotrophic$"
+ trait_lithoid_radiotrophic_desc:0 "$trait_plantoid_radiotrophic_desc$"
+ TRAIT_LITHOID_RADIOTROPHIC_EFFECT:0 "Replaces §Y50%§! of Base £minerals£ §YMinerals§! Upkeep with £energy£ §YEnergy§! Upkeep.\nPops living on §YTomb Worlds§! have no £energy£ §YEnergy§! Upkeep.\nPop Growth Speed on §YTomb Worlds§! §G+10%§!\nTomb World Habitability: §G+10%§!"
  trait_plantoid_budding:0 "แตกหน่อ"
  trait_plantoid_budding_desc:0 "§Lเผ่าพันธุ์นี้มีความสามารถในการขยายพันธุ์โดยการแตกหน่อ นอกเหนือจากการปฏิสนธิของเมล็ดหรือสปอร์ตามปกติ§!"
- TRAIT_PLANTOID_BUDDING_EFFECT:0 "ในแต่ละประชากรที่ทำงานเป็นทาสหรือดีกว่าจะผลิต £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§! 0.02"
+ trait_lithoid_budding:0 "Crystallization"
+ trait_lithoid_budding_desc:0 "§LWith crystalline growths, this species is capable of generating self replicating lattices of themselves, in addition to the more usual reproductive methods.§!"
+ TRAIT_PLANTOID_BUDDING_EFFECT:1 "Each pop working as a slave or better produces 0.02 £mod_pop_growth_speed£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!.\n\nThis stacks with other sources of $MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$ such as £building£ §H$building_clone_vats$§! or £job_spawning_drone£ §H$job_spawning_drone_plural$§!."
+ TRAIT_LITHOID_BUDDING_EFFECT:0 "$TRAIT_PLANTOID_BUDDING_EFFECT$\n\nThe §H$trait_lithoid$ Trait§! modifies this trait's effects."
  civic_catalytic_processing:0 "ตัวเร่งปฏิกิริยาแปรสภาพ"
  civic_catalytic_processing_desc:0 "By focusing their industrial efforts on catalytic chemistry, this civilization has unlocked the key to using organic materials in the construction of spacebound structures."
  civic_tooltip_catalytic_processing_effects:0 "แทนที่ £job_foundry£ §Y$job_foundry_plural$§! ด้วย £job_catalytic_technician£ §Y$job_catalytic_technician_plural$§! $job_catalytic_technician_effect_desc$"
